Removed jibberish from end of files and extra ending body tags

--- a/1990-99a.htm
+++ b/1990-99a.htm
@@ -6,15 +6,15 @@ data below. Meta tags help search engines identify the content of your page.  --
    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
    <meta http-equiv="expires" content="4 December 2005 12:00:00 GMT">
    <meta name="keywords" content="trandal, trandal krins, trandal grendelag, trandal grange,
-trandal bygda, trandahl, tranndal, trandall, tranndall, trandale, trandohl, trandoll, trondal, Ðrandall,
-Þrandall, drandal, drandall, drandale, trandalhatten, trandalshatten, trandal's hat, trandaldalen,
-trandal setre, trandal sætra, trandal seter, trandalsangen, trandalsongen, trandals song, songen
-om trandal, song of trandal, ytre trandal, indre trandal, inngarden, rønning, ronning, roenning,
-r&ouml;nning, rønningen, ruðningr, rydning, rydningen, rynningen, rødning, rødingen, røenninge,
-rønningen, nes, naes, næs, næss, arnie norse, brekke, christian gaard, fylling, hauge,
-maaseidvaag, måseidvåg, mo, molaup, naustenget, skiffle joe, storeide, trandal fjordhytter,
-hjørundfjord, hjorundfjord, hjoerundfjord, jorringfjord, fjordenes perle, pearl of the fjords, fiords,
-fjord, noreg, norge, norway, norwegen, westnorwegen, Ålesund, aalesund, tandal, tanndall,
+trandal bygda, trandahl, tranndal, trandall, tranndall, trandale, trandohl, trandoll, trondal, ï¿½randall,
+ï¿½randall, drandal, drandall, drandale, trandalhatten, trandalshatten, trandal's hat, trandaldalen,
+trandal setre, trandal sï¿½tra, trandal seter, trandalsangen, trandalsongen, trandals song, songen
+om trandal, song of trandal, ytre trandal, indre trandal, inngarden, rï¿½nning, ronning, roenning,
+r&ouml;nning, rï¿½nningen, ruï¿½ningr, rydning, rydningen, rynningen, rï¿½dning, rï¿½dingen, rï¿½enninge,
+rï¿½nningen, nes, naes, nï¿½s, nï¿½ss, arnie norse, brekke, christian gaard, fylling, hauge,
+maaseidvaag, mï¿½seidvï¿½g, mo, molaup, naustenget, skiffle joe, storeide, trandal fjordhytter,
+hjï¿½rundfjord, hjorundfjord, hjoerundfjord, jorringfjord, fjordenes perle, pearl of the fjords, fiords,
+fjord, noreg, norge, norway, norwegen, westnorwegen, ï¿½lesund, aalesund, tandal, tanndall,
 tanndal, tanndale">
    <meta name="description" content="Trandalsposten ARKIV 1990-1999 fr&aring; Trandal i
 Hj&oslash;rundfjord, Noreg. Trandalsposten ARCHIVE 1990-1999 from Trandal in Hjorundfjord, Norway. - - Trandahl - Trandall">
@@ -525,15 +525,15 @@ INGEN VEG UT
 Av Mette Holstad
 26.april 1999
 
-Fleire månader kvar vinter vert Ivar Nes isolert frå omverda. Årsaka er at vegen til gardsbruket hans på Trandal er i så dårleg stand at kommunen verken vil ruste opp eller brøyte vegen. Dei meiner dette ikkje er eit kommunalt ansvar.
+Fleire mï¿½nader kvar vinter vert Ivar Nes isolert frï¿½ omverda. ï¿½rsaka er at vegen til gardsbruket hans pï¿½ Trandal er i sï¿½ dï¿½rleg stand at kommunen verken vil ruste opp eller brï¿½yte vegen. Dei meiner dette ikkje er eit kommunalt ansvar.
 
 - - Ivar - -
 
-Kvar vinter, når den første snøen legg seg påTrandal, reiser Ivar Nes til Sæbø for å handle inn til vinteren. To heile frysarar skal fyllast for at pensjonisten skal ha nok mat til å klare seg gjennom vinteren. Han veit at det kan ta fleire månader til han neste gong får handle. Det kan også ta opp til fire månader før han får sjå folk igjen.Mest fryktar den hjartesjuke Ivar for helsa si i dei lange vintermånadene. Om han er sjuk er det ikkje mogeleg for lege å ta seg fram til garden hans om vinteren. Nei, blir eg sjuk om vinteren, kan eg berre vente på å få vandre, seier Ivar Nes. Han har kjempa i nesten ti år for å få sett i stand vegen til heimgarden sin. Treig kommunal handsaming har ikkje gjort kampen hans lettare.
+Kvar vinter, nï¿½r den fï¿½rste snï¿½en legg seg pï¿½Trandal, reiser Ivar Nes til Sï¿½bï¿½ for ï¿½ handle inn til vinteren. To heile frysarar skal fyllast for at pensjonisten skal ha nok mat til ï¿½ klare seg gjennom vinteren. Han veit at det kan ta fleire mï¿½nader til han neste gong fï¿½r handle. Det kan ogsï¿½ ta opp til fire mï¿½nader fï¿½r han fï¿½r sjï¿½ folk igjen.Mest fryktar den hjartesjuke Ivar for helsa si i dei lange vintermï¿½nadene. Om han er sjuk er det ikkje mogeleg for lege ï¿½ ta seg fram til garden hans om vinteren. Nei, blir eg sjuk om vinteren, kan eg berre vente pï¿½ ï¿½ fï¿½ vandre, seier Ivar Nes. Han har kjempa i nesten ti ï¿½r for ï¿½ fï¿½ sett i stand vegen til heimgarden sin. Treig kommunal handsaming har ikkje gjort kampen hans lettare.
 
-Eitt år med venting
+Eitt ï¿½r med venting
 
-1991 søkte han første gong for å få kommunen til å ruste opp den to kilometer lange vegen, som går frå Trandal og ut til Nes. Kommunen vendte tommelen ned. Dei ville ikkje ruste opp vegen, fordi vegen var i for dårleg stand. Ivar Nes søkte på nytt i 1995 og i 1997. Den siste søknaden han sende til Ørsta kommune var datert 12. mai 1998, dagen etter at heile formannskapet hadde vore på synfaring på vegen. Då ba han kommunen om å få grusa vegen. Ivar har venta i eitt år på &aring; få svar på søknaden sin.
+1991 sï¿½kte han fï¿½rste gong for ï¿½ fï¿½ kommunen til ï¿½ ruste opp den to kilometer lange vegen, som gï¿½r frï¿½ Trandal og ut til Nes. Kommunen vendte tommelen ned. Dei ville ikkje ruste opp vegen, fordi vegen var i for dï¿½rleg stand. Ivar Nes sï¿½kte pï¿½ nytt i 1995 og i 1997. Den siste sï¿½knaden han sende til ï¿½rsta kommune var datert 12. mai 1998, dagen etter at heile formannskapet hadde vore pï¿½ synfaring pï¿½ vegen. Dï¿½ ba han kommunen om ï¿½ fï¿½ grusa vegen. Ivar har venta i eitt ï¿½r pï¿½ &aring; fï¿½ svar pï¿½ sï¿½knaden sin.
 ========================
 END COMMENTS  -->
 
@@ -757,18 +757,6 @@ END COMMENT  -->
 <center><hr width="100%"></center>
 <p><br></p>
 
-</font></p></font></p></font></body>
-</body></html>
-ONT>
-<p>
-
-<center>
-<br>~~~~~~~~~~~~<br>
-<fo€ºwœ.wj'`7e˜i&`meg˜iž ï€ßró:`›="" ="" œ0ge“œ¦ipöŒ2h˜wjb`wi¦ih4="" jm¦i¢i‚hrhwjs`à="" jìwj`áïi,€—ÿÿŸÿÿ¨ÿÿÿÿhÿÿ»ÿÿÿÿoÿÿ­ÿÿÿÿ{ÿÿýÿÿ?ÿÿ ÿÿøÿÿuÿÿ½ÿÿÿÿ-ÿÿ†ÿÿ†ÿÿ5ÿÿnÿÿžÿÿ ÿÿ¨ÿÿðÿÿòÿÿÿÿÿÿ.ÿÿ8ÿÿxÿÿ³ÿÿµÿÿëÿÿ3="" ÿÿ="ÿÿŽ" ÿÿù="" ÿÿù="" ß="" ÿÿá="" ÿÿ6="" ÿÿ="" ÿÿ‡="" ÿÿ‰="" ÿÿã="" ÿÿ.ÿÿ4ÿÿ6ÿÿŽÿÿùÿÿßÿÿáÿÿbÿÿÿÿ“ÿÿžÿÿ²ÿÿ½ÿÿ½¿ÿÿéÿÿûÿÿf="" ÿÿq="" ÿÿs="" ÿÿ]="" ÿÿ›="" ÿÿç="" ÿÿò="" ÿÿô="" ÿÿþ="" ÿÿ)ÿÿdÿÿoÿÿqÿÿ{ÿÿæÿÿÿÿ/ÿÿ/:ÿÿ<ÿÿfÿÿkÿÿrÿÿ™ÿÿ§ÿÿîÿÿüÿÿêÿÿøÿÿÿÿeÿÿlÿÿ“ÿÿ¶ÿÿáÿÿãÿÿãÿÿ="" ÿÿ="" 7ÿÿ9ÿÿ="">ÿÿHÿÿMÿÿ‚ÿÿ·ÿÿìÿÿ!ÿÿVÿÿ‹ÿÿµÿÿÀÿÿÂÿÿæÿÿèÿÿÿÿÿÿ.ÿÿTÿÿTVÿÿnÿÿ}ÿÿÿÿ”ÿÿ®ÿÿÒÿÿÿÿ/ÿÿ7ÿÿPÿÿeÿÿgÿÿ¥ÿÿìÿÿîÿÿ,ÿÿsÿÿuÿÿ¯ÿÿ¯öÿÿøÿÿþÿÿ-ÿÿmÿÿ§ÿÿÿÿ ÿÿÄÿÿÆÿÿÌÿÿðÿÿõÿÿ÷ÿÿÿÿ&ÿÿJÿÿƒÿÿ§ÿÿ©ÿÿ©±ÿÿÈÿÿ×ÿÿÙÿÿÿÿ_ÿÿaÿÿgÿÿAÿÿCÿÿçÿÿéÿÿïÿÿÿÿÿÿÿÿ/ÿÿIÿÿmÿÿ¦ÿÿ¦ÊÿÿÒÿÿÔÿÿïÿÿÿÿÿÿFÿÿÿÿËÿÿÿÿÿÿÿÿÿÿ!ÿÿƒ ÿÿ… ÿÿ‹ ÿÿ¯ ÿÿ´ ÿÿ¶ ÿÿ¶ Ë ÿÿå ÿÿ	!ÿÿB!ÿÿf!ÿÿh!ÿÿp!ÿÿ‡!ÿÿ–!ÿÿ˜!ÿÿÖ!ÿÿ"ÿÿ"ÿÿ%"ÿÿH"ÿÿˆ"ÿÿÂ"ÿÿ-#ÿÿ/#ÿÿ¾#ÿÿ¾#À#ÿÿ$ÿÿ¨$ÿÿª$ÿÿ¯$ÿÿÿ$ÿÿG%ÿÿ‰%ÿÿÈ%ÿÿ&ÿÿ&ÿÿ&ÿÿ&ÿÿ;&ÿÿ@&ÿÿB&ÿÿW&ÿÿq&ÿÿ•&ÿÿÎ&ÿÿÎ&ò&ÿÿô&ÿÿü&ÿÿ'ÿÿ5'ÿÿ7'ÿÿu'ÿÿ¼'ÿÿ¾'ÿÿØ(ÿÿÚ(ÿÿï)ÿÿø)ÿÿ¤*ÿÿ¦*ÿÿ¬*ÿÿÐ*ÿÿÕ*ÿÿ×*ÿÿß*ÿÿß*ö*ÿÿ+ÿÿ+ÿÿB+ÿÿ‰+ÿÿ‹+ÿÿ‘+ÿÿ´+ÿÿô+ÿÿ.,ÿÿ¾,ÿÿÀ,ÿÿa-ÿÿc-ÿÿ·-ÿÿK.ÿÿM.ÿÿR.ÿÿ¢.ÿÿê.ÿÿê.,/ÿÿk/ÿÿª/ÿÿ²/ÿÿ´/ÿÿº/ÿÿÞ/ÿÿã/ÿÿå/ÿÿú/ÿÿ0ÿÿ80ÿÿq0ÿÿ•0ÿÿ—0ÿÿœ0ÿÿ¼0ÿÿØ0ÿÿ1ÿÿ^1ÿÿ^1`1ÿÿŠ1ÿÿÊ1ÿÿ2ÿÿ&3ÿÿf3ÿÿ 3ÿÿÊ3ÿÿ5ÿÿ!5ÿÿ)5ÿÿ+5ÿÿ15ÿÿU5ÿÿZ5ÿÿ\5ÿÿq5ÿÿ‹5ÿÿ¯5ÿÿè5ÿÿè56ÿÿ6ÿÿ6ÿÿ-6ÿÿ>6ÿÿ@6ÿÿ~6ÿÿÆ6ÿÿÈ6ÿÿÝ6ÿÿð6ÿÿ'7ÿÿO7ÿÿb7ÿÿu7ÿÿ7ÿÿÏ7ÿÿÙ7ÿÿ<8ÿÿQ8ÿÿQ8«8ÿÿº8ÿÿÅ8ÿÿÙ8ÿÿä8ÿÿì8ÿÿî8ÿÿô8ÿÿ9ÿÿ9ÿÿ9ÿÿ'9ÿÿ>9ÿÿJ9ÿÿL9ÿÿR9ÿÿ9ÿÿ×9ÿÿÙ9ÿÿü9ÿÿü9<:ÿÿv:ÿÿ
-;ÿÿ;ÿÿº;ÿÿ¼;ÿÿ<ÿÿ¤<ÿÿ¦<ÿÿ«<ÿÿû<ÿÿC=ÿÿ…=ÿÿÄ=ÿÿ>ÿÿ>ÿÿ
->ÿÿ>ÿÿ7>ÿÿ<>ÿÿ<>>>ÿÿ]>ÿÿs>ÿÿ³>ÿÿû>ÿÿ9?ÿÿ€?ÿÿ‚?ÿÿ@ÿÿ@ÿÿ@ÿÿŸ@ÿÿ¤@ÿÿô@ÿÿ<aÿÿ~aÿÿ½aÿÿüaÿÿbÿÿbÿÿbbÿÿ0bÿÿ5bÿÿ7bÿÿlbÿÿfbÿÿŠbÿÿãbÿÿçbÿÿébÿÿñbÿÿcÿÿcÿÿ!cÿÿ'cÿÿecÿÿ¬cÿÿ®cÿÿñcÿÿdÿÿdkdÿÿádÿÿãdÿÿ™eÿÿ›eÿÿïeÿÿƒfÿÿ…fÿÿŠfÿÿúfÿÿ"gÿÿdgÿÿ£gÿÿâgÿÿêgÿÿìgÿÿògÿÿhÿÿhÿÿhÿÿh7hÿÿhhÿÿjhÿÿphÿÿŽhÿÿõhÿÿ×hÿÿúhÿÿ:iÿÿtiÿÿjÿÿjÿÿµjÿÿ·jÿÿkÿÿŸkÿÿ¡kÿÿ¦kÿÿökÿÿ>Lÿÿ>L€Lÿÿ¿LÿÿþLÿÿMÿÿMÿÿMÿÿ2Mÿÿ7Mÿÿ9MÿÿTMÿÿhMÿÿjMÿÿªMÿÿñMÿÿ+NÿÿrNÿÿtNÿÿúNÿÿQOÿÿSOÿÿSOÔOÿÿÖOÿÿPÿÿbPÿÿ®PÿÿöPÿÿ)Qÿÿ+Qÿÿ1QÿÿUQÿÿZQÿÿ\QÿÿwQÿÿ‰Qÿÿ‹QÿÿËQÿÿRÿÿQRÿÿ˜RÿÿšRÿÿšRTÿÿUÿÿ|Uÿÿ„Uÿÿ†VÿÿîVÿÿPWÿÿšWÿÿœWÿÿ¢WÿÿÆWÿÿËWÿÿÍWÿÿéWÿÿûWÿÿ;XÿÿƒXÿÿÁXÿÿYÿÿ
-Yÿÿ
-YÔYÿÿÖYÿÿ Zÿÿ¢Zÿÿ§Zÿÿ÷Zÿÿ?[ÿÿ[ÿÿÀ[ÿÿÿ[ÿÿ\ÿÿ	\ÿÿ\ÿÿ3\ÿÿ8\ÿÿ:\ÿÿY\ÿÿo\ÿÿ¯\ÿÿ÷\ÿÿ÷\5]ÿÿ|]ÿÿ~]ÿÿ5^ÿÿ7^ÿÿÅ^ÿÿÇ^ÿÿÍ^ÿÿñ^ÿÿö^ÿÿø^ÿÿ
-_ÿÿ'_ÿÿK_ÿÿ„_ÿÿ¨_ÿÿª_ÿÿ²_ÿÿÎ_ÿÿã_ÿÿã_å_ÿÿ%`ÿÿm`ÿÿ«`ÿÿò`ÿÿô`ÿÿú`ÿÿåbÿÿÄdÿÿÆdÿÿeÿÿ^fÿÿefÿÿgfÿÿlfÿÿ¼fÿÿgÿÿFgÿÿ…gÿÿÄgÿÿÄgÌgÿÿÎgÿÿãgÿÿýgÿÿhÿÿhÿÿ,hÿÿ.hÿÿiÿÿiÿÿ*iÿÿ,iÿÿlÿÿ	lÿÿlÿÿ lÿÿnÿÿ7nÿÿJnÿÿLnÿÿLnRnÿÿvnÿÿ{nÿÿ}nÿÿ™nÿÿ­nÿÿínÿÿ4oÿÿroÿÿ¹oÿÿ»oÿÿÁoÿÿ“pÿÿ•pÿÿ\qÿÿ^qÿÿdqÿÿˆqÿÿqÿÿqÿÿq©qÿÿ½qÿÿýqÿÿDrÿÿ‚rÿÿÉrÿÿËrÿÿCsÿÿEsÿÿ±sÿÿ³sÿÿ¹sÿÿÝsÿÿâsÿÿäsÿÿtÿÿtÿÿXtÿÿŸtÿÿÝtÿÿÝt$uÿÿ&uÿÿ,uÿÿÏuÿÿÑuÿÿƒvÿÿ…vÿÿ‹vÿÿ¯vÿÿ´vÿÿ¶vÿÿÕvÿÿîvÿÿ.wÿÿuwÿÿ³wÿÿúwÿÿüwÿÿxÿÿŠxÿÿŠxŒxÿÿ
-yÿÿyÿÿyÿÿ9yÿÿ>yÿÿ@yÿÿ_yÿÿ¸yÿÿøyÿÿ?z  ÿÿ}z  ÿÿÄz  ÿÿÆz  ÿÿ%|  ÿÿ'|  ÿÿƒ}  ÿÿ‹}  ÿÿ}  ÿÿ“}  ÿÿ “}  ·}  ÿÿ¼}  ÿÿ¾}  ÿÿÒ}  ÿÿ ~  ÿÿ~  ÿÿ~  ÿÿ)~  ÿÿz~  ÿÿÅ~  ÿÿÐ~  ÿÿÚ~  ÿÿ  ÿÿQ  ÿÿž  ÿÿ¹  ÿÿá  ÿÿ€  ÿÿF€  ÿÿa€  ÿÿ a€  l€  ÿÿn€  ÿÿt€  ÿÿ˜€  ÿÿ€  ÿÿŸ€  ÿÿ·€  ÿÿÕ€  ÿÿÚ€  ÿÿÜ€  ÿÿæ€  ÿÿý€  ÿÿ  ÿÿC  ÿÿm  ÿÿ¬  ÿÿ»  ÿÿÒ  ÿÿÝ  ÿÿß  ÿÿ ß  ç  ÿÿí  ÿÿ‚  ÿÿ‚  ÿÿ‚  ÿÿ'‚  ÿÿ6‚  ÿÿ8‚  ÿÿB‚  ÿÿ™‚  ÿÿIƒ  ÿÿ‰ƒ  ÿÿÄƒ  ÿÿÏƒ  ÿÿÑƒ  ÿÿÛƒ  ÿÿàƒ  ÿÿ„  ÿÿJ„  ÿÿ„  ÿÿ „  ´„  ÿÿé„  ÿÿ…  ÿÿH…  ÿÿS…  ÿÿU…  ÿÿd…  ÿÿf…  ÿÿ~…  ÿÿª…  ÿÿ´…  ÿÿ†  ÿÿ†  ÿÿ?†  ÿÿH†  ÿÿJ†  ÿÿY†  ÿÿh†  ÿÿj†  ÿÿ†  ÿÿ †  «†  ÿÿ¼†  ÿÿ¾†  ÿÿð†  ÿÿ‡  ÿÿO‡  ÿÿ`‡  ÿÿh‡  ÿÿr‡  ÿÿ¡‡  ÿÿÝ‡  ÿÿè‡  ÿÿ2ˆ  ÿÿMˆ  ÿÿˆ  ÿÿˆ  ÿÿ•ˆ  ÿÿ¸ˆ  ÿÿÒˆ  ÿÿëˆ  ÿÿ ëˆ  ‰  ÿÿ!‰  ÿÿ_‰  ÿÿ§‰  ÿÿ©‰  ÿÿç‰  ÿÿ/Š  ÿÿ1Š  ÿÿgŠ  ÿÿÄŠ  ÿÿØŠ  ÿÿ+‹  ÿÿh‹  ÿÿn‹  ÿÿp‹  ÿÿ²‹  ÿÿü‹  ÿÿHŒ  ÿÿŒ  ÿÿÈŒ  ÿÿ ÈŒ  ÊŒ  ÿÿ  ÿÿV  ÿÿ¢  ÿÿê  ÿÿŽ  ÿÿŽ  ÿÿ$Ž  ÿÿtŽ  ÿÿ¼Ž  ÿÿþŽ  ÿÿ=  ÿÿ|  ÿÿ„  ÿÿ†  ÿÿŒ  ÿÿ°  ÿÿµ  ÿÿ·  ÿÿÚ  ÿÿ Ú  ë  ÿÿí  ÿÿü  ÿÿ  ÿÿ
-  ÿÿ!  ÿÿ;  ÿÿE  ÿÿ_  ÿÿq  ÿÿs  ÿÿ—  ÿÿ¦  ÿÿ¨  ÿÿ±  ÿÿº  ÿÿ¼  ÿÿµ  ÿÿ·  ÿÿÚ  ÿÿ    Arial    ÿÿ	!  ÿÿB!  ÿÿf!  ÿÿh!  ÿÿp!  ÿÿ‡!  ÿÿ–!  ÿÿ˜!  ÿÿÖ!  ÿÿ"  ÿÿ"  ÿÿ%"  ÿÿH"  ÿÿˆ"  ÿÿÂ"  ÿÿ-#  ÿÿ/#  ÿÿ¾#  ÿÿ </a  ÿÿ~a  ÿÿ½a  ÿÿüa  ÿÿb  ÿÿb  ÿÿ b  b  ÿÿ0b  ÿÿ5b  ÿÿ7b  ÿÿlb  ÿÿfb  ÿÿŠb  ÿÿãb  ÿÿçb  ÿÿéb  ÿÿñb  ÿÿc  ÿÿc  ÿÿ!c  ÿÿ'c  ÿÿec  ÿÿ¬c  ÿÿ®c  ÿÿñc  ÿÿd  ÿÿ d  kd  ÿÿád  ÿÿãd  ÿÿ™e  ÿÿ›e  ÿÿïe  ÿÿƒf  ÿÿ…f  ÿÿŠf  ÿÿúf  ÿÿ"g  ÿÿdg  ÿÿ£g  ÿÿâg  ÿÿêg  ÿÿìg  ÿÿòg  ÿÿh  ÿÿh  ÿÿh  ÿÿ h  7h  ÿÿhh  ÿÿjh  ÿÿph  ÿÿŽh  ÿÿõh  ÿÿ×h  ÿÿúh  ÿÿ:i  ÿÿti  ÿÿj  ÿÿj  ÿÿµj  ÿÿ·j  ÿÿk  ÿÿŸk  ÿÿ¡k  ÿÿ¦k  ÿÿök  ÿÿ></fo€   º  w œ.wj'`7e˜i&`meg˜iž></center></p>
+</font></p></font></p></font>
+</body>
+</html>
