--- a/afrika-0.htm
+++ b/afrika-0.htm
@@ -239,15 +239,4 @@ reserved.</font></center>
 <p><br></p>
 
 </body>
-</body></html>
-
-<!-- /\ end html  -->
- src="england2.gif" alt ="P&arinЂа=wd.§N'`7eа^&`Megа^ћ П@ВIу:`› єґљє0g‚“pцЊ2h–§Nb`ЃHrh¤4
-PЊrhzh~hvh§Ns`а	PH§NЏ`БчG,Ђ—яяџяяЎяя©яяцяя:яяlяяҐяядяя}яяяя¤яя­яяЇяя·яяяяяяяяя*яяSяяSqяя¶яяыяя/яяKяяsяяЌяя›яяќяя°яяЕяяхяя3яя5яяXяяbяяјяядяяяяяя?яяAяяFяяHяяOяяQяяљяягяякяямяяцяяGяяђяя—яяўяя¤яя@яяуяяъяяьяяь`яяА
-яяЗ
-яяЙ
-яя<яяяя†яя€яяГяяЅяяДяяЖяятяяяя!яя/яя‹яяшяяяяя°яя°tяя{яягяя_яяfяяШяяYяяhяяjяя& яяд яяж яян яяп яя›"яяh$яяj$яяq$яяs$яяT%яяT%@&яяG&яяI&яяк'яяH)яяO)яяQ)яяє)яя2*яя9*яя;*яяI*яяK*яяn*яяp*яяЇ*яяч*яя_+яяЈ+яяЭ+яяЭ+д+яяж+яя@,яяі,яяµ,яяШ,яяЪ,яя-яяa-яяџ-яяг-яя.яя$.яя+.яяq.яя­.яяЇ.яяТ.яяЩ.яяЫ.яяЫ./яяb/яя™/яяГ/яя0яя\0яяc0яяj0яяl0яя«0яяу0яя/1яяY1яяЎ1яяс1яяш1яяя1яя2яя@2яя€2яя€2Д2яяо2яя;3яяђ3яя—3яяћ3яя 3яяЯ3яя'4яяk4яяО4яя5яя%5яя'5яяЂ5яяЕ5яяЗ5яя6яя[6яя]6яя]6c6яя†6яя€6яя–6яя6яяў6яяк6яяр6яяц6яяш6яя,7яя_7яяў7яяЫ7яяЭ7яяз7яя8яяh8яяs8яяu8яяu88яя§8яяЪ8яя9яя"9яяB9яяM9яяO9яяV9яя]9яяg9яяr9яяx9яяz9яя€9яяЉ9яя”9яяЭ9яя:яя/:яя/:B:яя†:яяє:яяф:яя;яя;яя;яя<;яя>;яяL;яяZ;яяh;яяv;яя„;яя†;яяё;яя	<яя$<яя[<яяa<яяa<g<яяЏ<яя©<яяґ<яяК<яяз<яяо<яях<яя=яяV=яяq=яяЈ=яяҐ=яяі=яяµ=яяѕ=яяЗ=яяЙ=яяа=яяв=яя Arialh-africa">
-	http://www.go2africa.com/south-africa <i> Tourism?</i><br>
-
-
-<center><hr width="97%"></center>
+</html>
