--- a/arnie-2k.htm
+++ b/arnie-2k.htm
@@ -52,12 +52,12 @@ Trandal - - - Trandahl - - - Trandall</font></font></center>
 </center>
 
 <font color="#000000">
-<br>12 feb. 2002 - (Kjelde: BJØRNQVISTS BLEMMER)...
-<br><b>"Det skal godt gjøres å komme utenom <a href="http://www.nrk.no/programmer/radio/herreavdelingen/bjornqvists_blemmer/1644126.html
+<br>12 feb. 2002 - (Kjelde: BJï¿½RNQVISTS BLEMMER)...
+<br><b>"Det skal godt gjï¿½res ï¿½ komme utenom <a href="http://www.nrk.no/programmer/radio/herreavdelingen/bjornqvists_blemmer/1644126.html
 "> Arnie Skiffle-Joe Norse</a>, hvis man har bare litt sans for saker og ting <u>utenom det vanlige</u> underholdningstilbudet"... ...
 <a href="http://www.nrk.no/programmer/radio/herreavdelingen/bjornqvists_blemmer/">
-han har begått en CD</a>, som kan ta pusten fra de fleste.... ...CD-coveret...små gullkorn, som varmer en kjølig høstnatt.... ...opptredener på TV, ( senest nå på TV2000 hos Synnøve)...  "</b>
-<br><i>&nbsp;&nbsp;&nbsp;&nbsp; It would be a bit hard not to acknowledge Arnie Skiffle-Joe Norse if one only has the ability to see <u>beyond ordinary</u> entertainment"... ...he's released a CD that can take one's breath away.... ...The CD cover has... small gold nuggets, that warm a cold Fall night... ...TV appearances, (just lately now on TV2000 with Synnøve)... </i>
+han har begï¿½tt en CD</a>, som kan ta pusten fra de fleste.... ...CD-coveret...smï¿½ gullkorn, som varmer en kjï¿½lig hï¿½stnatt.... ...opptredener pï¿½ TV, ( senest nï¿½ pï¿½ TV2000 hos Synnï¿½ve)...  "</b>
+<br><i>&nbsp;&nbsp;&nbsp;&nbsp; It would be a bit hard not to acknowledge Arnie Skiffle-Joe Norse if one only has the ability to see <u>beyond ordinary</u> entertainment"... ...he's released a CD that can take one's breath away.... ...The CD cover has... small gold nuggets, that warm a cold Fall night... ...TV appearances, (just lately now on TV2000 with Synnï¿½ve)... </i>
 
 <!--
 ~~~~~~~~~
@@ -66,35 +66,35 @@ han har begått en CD</a>, som kan ta pusten fra de fleste.... ...CD-coveret...sm
 
 http://www.nrk.no/programmer/radio/herreavdelingen/bjornqvists_blemmer/1644126.html
 
-Saken er fra: NRK.no > Programmer > Radio > Herreavdelingen > Bjørnqvists blemmer
+Saken er fra: NRK.no > Programmer > Radio > Herreavdelingen > Bjï¿½rnqvists blemmer
 
 Arnie Norse
 Publisert 12.02.2002 13:25.
 
 Arnie er de brune kafeers ensomme rytter, med sin utrettelige <A HREF="http://www.unicycle.com">enhjulssykkel,</A> sin mexe-hatt, som
-ser ut som om den er kjøpt på Standard, og ikke minst for sin musikk – der tekst og toner
-maltrakteres med en dødsforakt, man bare må ta av seg hatten for.
+ser ut som om den er kjï¿½pt pï¿½ Standard, og ikke minst for sin musikk ï¿½ der tekst og toner
+maltrakteres med en dï¿½dsforakt, man bare mï¿½ ta av seg hatten for.
 
-I årevis har han holdt på – på restaurant Tranen, på utdrikningslag (bl.a. mitt, for 15 år siden,
-akkompagnert av kordamene Blackie og Whitey og en blind fyr på el-piano), sporadiske
-opptredener på TV, ( senest nå på TV2000 hos Synnøve) og på slitne lokaler over det ganske
+I ï¿½revis har han holdt pï¿½ ï¿½ pï¿½ restaurant Tranen, pï¿½ utdrikningslag (bl.a. mitt, for 15 ï¿½r siden,
+akkompagnert av kordamene Blackie og Whitey og en blind fyr pï¿½ el-piano), sporadiske
+opptredener pï¿½ TV, ( senest nï¿½ pï¿½ TV2000 hos Synnï¿½ve) og pï¿½ slitne lokaler over det ganske
 land.
 
-Ver å merke seg er også coveret. Der får man, foruten fyldig tekst og billedmateriale, små
-gullkorn, som varmer en kjølig høstnatt. Sjekk følgende tekst til et bilde. Der tvillingene Frank og
+Ver ï¿½ merke seg er ogsï¿½ coveret. Der fï¿½r man, foruten fyldig tekst og billedmateriale, smï¿½
+gullkorn, som varmer en kjï¿½lig hï¿½stnatt. Sjekk fï¿½lgende tekst til et bilde. Der tvillingene Frank og
 Jan Storeide sitter og skuer ut over en fjord, med gitar i fanget:
 
-”Trandal tvillingene speider mot Sæbø og ferja, som nærmer seg. ”Håper Arnie er med ferja”,
-kommer det fra Frank med gitaren. ”Ja”, svarer Jan, så får vi begynt å øve på CD-låtene våre!”
+ï¿½Trandal tvillingene speider mot Sï¿½bï¿½ og ferja, som nï¿½rmer seg. ï¿½Hï¿½per Arnie er med ferjaï¿½,
+kommer det fra Frank med gitaren. ï¿½Jaï¿½, svarer Jan, sï¿½ fï¿½r vi begynt ï¿½ ï¿½ve pï¿½ CD-lï¿½tene vï¿½re!ï¿½
 
-Litt nedtur er det, aty Arnie har fått med seg musikere, som i hvert fall tilnærmelsesvis kan holde
-takten. Men hva gjør vel det, med tekster som denne. Hør ALLA MALLA DASKI, der Arnie og
-Volda-Mona hiver seg utpå!
+Litt nedtur er det, aty Arnie har fï¿½tt med seg musikere, som i hvert fall tilnï¿½rmelsesvis kan holde
+takten. Men hva gjï¿½r vel det, med tekster som denne. Hï¿½r ALLA MALLA DASKI, der Arnie og
+Volda-Mona hiver seg utpï¿½!
 
 --->
 
 <p>2003 ? - (Kjelde: TLRYGG.com)...
-<br><b>"<a href="http://www.tlrygg.com/blue01.shtml"> Arnie </a> har høy underholdningsfaktor"... </b>
+<br><b>"<a href="http://www.tlrygg.com/blue01.shtml"> Arnie </a> har hï¿½y underholdningsfaktor"... </b>
 <br><i>&nbsp;&nbsp;&nbsp;&nbsp; Arnie is highly entertaining... </i></p>
 
 <a name="kassettnr12"></a>
@@ -109,7 +109,7 @@ Volda-Mona hiver seg utpå!
 <br><font size="+2"><font color="#000000"><b><u>CD &amp; song liste</u></b></font></font></font></center>
 
 <font size="3"><font color="#FF0000">
-<center><b>.....Husker du disse toner frå radio og TV?.....</b></center>
+<center><b>.....Husker du disse toner frï¿½ radio og TV?.....</b></center>
 </font></font>
 
 <center><font color="#000000">
@@ -118,11 +118,11 @@ Volda-Mona hiver seg utpå!
 <br>"Manana Amor"
 <br>"Arnie Skiffle-Joe Norse's Greatest Hits"
 <br>"Dinge - Ling"
-<br>”Arnie og Tvillingene under Sunnmørsalpene der
+<br>ï¿½Arnie og Tvillingene under Sunnmï¿½rsalpene der
 <br>blomster vokser ville"
 <br>"Alla Malla Daski" - (Arnie og Volda-Mona)
 <br>"Hoja-Ja!"
-<br>"Bært-bært-sangen"
+<br>"Bï¿½rt-bï¿½rt-sangen"
 <br>"Binga Bonga"
 <br>....og ...meir.</b>
 
@@ -137,7 +137,7 @@ Volda-Mona hiver seg utpå!
 <br>1. - "Lucy Lee"
 <br>2. - "Go Bananas"
 <br>3. - "Glatt-Celle"
-<br>4. - "Ikke Dra På Nattklubb"
+<br>4. - "Ikke Dra Pï¿½ Nattklubb"
 <br>5. - "Harru Sett Min Lille Kone"
 <br>6. - "<a href="sound/t-song01.wav">Trandal Sangen</a>"
 <br>7. - "Tusen Takk"
@@ -145,10 +145,10 @@ Volda-Mona hiver seg utpå!
 <br>9. - "Kyss Meg Godnatt"
 <br>10. - "Gi Meg En Sjanse"
 <br>11. - "Taushet"
-<br>12. - "Det Måtte Bli Deg"
+<br>12. - "Det Mï¿½tte Bli Deg"
 <br>13. - "Kan Jeg Stele Deg Fra En Annen"
 <br>14. - "Ole Paus Visa"
-<br>15. - "Kollektbøtta's Sang"
+<br>15. - "Kollektbï¿½tta's Sang"
 <br>16. - "Oh Carmencita"
 <br>
 
@@ -184,26 +184,26 @@ Volda-Mona hiver seg utpå!
 </u></b></font></center>
 
 <br>2003 ? - (Kjelde: NATTGUIDEN.no)...
-<br><b>"Tranen" på Alexander Kiellands Plass, Oslo, ..dette er
-<a href="http://www.nattguiden.no/utested/159"> legendariske Arnie "Skiffle-Joe" Norses </a> andre hjem." Her fikk vi oppleve et forykende show, til tross for at artistene antakeligvis var både døve og blinde.....  ....Se Arnie sykle rundt på en enhjuling"... </b>
+<br><b>"Tranen" pï¿½ Alexander Kiellands Plass, Oslo, ..dette er
+<a href="http://www.nattguiden.no/utested/159"> legendariske Arnie "Skiffle-Joe" Norses </a> andre hjem." Her fikk vi oppleve et forykende show, til tross for at artistene antakeligvis var bï¿½de dï¿½ve og blinde.....  ....Se Arnie sykle rundt pï¿½ en enhjuling"... </b>
 <br><i>&nbsp;&nbsp;&nbsp;&nbsp; "Tranen" restaurant at Alexander Kjelland's Place in Oslo, ...this is the legendary Arnie "Skiffle-Joe" Norse's second home... Here we experienced a whirlwind of a show, in spite of the artists apparently being both deaf and blind...  ..See Arnie ride around on a unicycle...  </i></p>
 
 <p>20 mars 2002 - (Kjelde: NATTGUIDEN.no)...
 <br><b>"Kjempe fint at vi har slike steder som Restaurant Tranen og
 <a href="http://www.nattguiden.no/utested/159">Arni Skiffle-Joe sitt show</a>
-..... Så tusen tusen takk, for mange fine kvelder på restaurant Tranen !!! Dette må bare oppleves".... </b>
+..... Sï¿½ tusen tusen takk, for mange fine kvelder pï¿½ restaurant Tranen !!! Dette mï¿½ bare oppleves".... </b>
 <br><i>&nbsp;&nbsp;&nbsp;&nbsp; Great that we have places like Restaurant Tranen and Arnie Skiffle-Joe's show...  A thousand thanks, for many fine nights at the Tranen restaurant. This has to be experienced...</i></p>
 
 <p>14 jan. 2000 - (Kjelde: NATTGUIDEN.no)...
-<br><b>"De møkka-coole stedene i sentrum burde tatt seg en studietur til Tranen!... - -
+<br><b>"De mï¿½kka-coole stedene i sentrum burde tatt seg en studietur til Tranen!... - -
 <a href="http://www.nattguiden.no/utested/159">Den godeste Arnie</a>
-... - - ...Vel verd å få med seg, som kuriosa, og et minne om hva Oslo engang i ikke alt for fjern fortid var, før det ble dødsviktig for alle å ta seg bra ut på cáfe"....</b>
+... - - ...Vel verd ï¿½ fï¿½ med seg, som kuriosa, og et minne om hva Oslo engang i ikke alt for fjern fortid var, fï¿½r det ble dï¿½dsviktig for alle ï¿½ ta seg bra ut pï¿½ cï¿½fe"....</b>
 <br><i>&nbsp;&nbsp;&nbsp;&nbsp; Those "overly cool" places in Central Oslo should take a trip to Tranen to learn a thing or two!... - - Arnie - - is well worth experiencing, both as a curiosity and to also remember what Oslo was, not too long ago, before one's own outer appearance became of such exceedingly "life &amp; death importance" before going out to a cafe....</i></p>
 
 <p><br>
 
 <a name="tvillingane"> </a>
-<br><b>Frå CD omslaget...</b>
+<br><b>Frï¿½ CD omslaget...</b>
 <br><i>From the CD cover...</i>
 
 <center>
@@ -213,8 +213,8 @@ Volda-Mona hiver seg utpå!
 
 <center>
 <font color="#FF0000">
-”Trandal tvillingene speider mot Sæbø og ferja, som nærmer seg. ”Håper Arnie er med ferja”,
-kommer det fra <a href="naering1.htm#christiangaard">Frank</a> med gitaren. ”Ja”, svarer <a href="jstoreid.htm#topp">Jan</a>, så får vi begynt å øve på CD-låtene våre!”</font>
+ï¿½Trandal tvillingene speider mot Sï¿½bï¿½ og ferja, som nï¿½rmer seg. ï¿½Hï¿½per Arnie er med ferjaï¿½,
+kommer det fra <a href="naering1.htm#christiangaard">Frank</a> med gitaren. ï¿½Jaï¿½, svarer <a href="jstoreid.htm#topp">Jan</a>, sï¿½ fï¿½r vi begynt ï¿½ ï¿½ve pï¿½ CD-lï¿½tene vï¿½re!ï¿½</font>
 <font color="#000000"></font>
 </center>
 
@@ -232,12 +232,12 @@ kommer det fra <a href="naering1.htm#christiangaard">Frank</a> med gitaren. ”Ja”
 <center>
 <br>~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 <br>
-<p>~~ SKÅL, "Arnie Norse" SKÅL !! ~~</p>
-<p>~~ SKÅL, "Skiffle-Joe" SKÅL !! ~~</p>
-<p>~~ SKÅL, "Mexico-Joe" SKÅL !! ~~</p>
-<p>~~ SKÅL, "K.A.J. Printer" SKÅL !! ~~</p>
-<p>~~ SKÅL, "Kjell Arne" SKÅL !! ~~</p>
-<p>~~ SKÅL, "Alle sammen" SKÅL !! ~~</p>
+<p>~~ SKï¿½L, "Arnie Norse" SKï¿½L !! ~~</p>
+<p>~~ SKï¿½L, "Skiffle-Joe" SKï¿½L !! ~~</p>
+<p>~~ SKï¿½L, "Mexico-Joe" SKï¿½L !! ~~</p>
+<p>~~ SKï¿½L, "K.A.J. Printer" SKï¿½L !! ~~</p>
+<p>~~ SKï¿½L, "Kjell Arne" SKï¿½L !! ~~</p>
+<p>~~ SKï¿½L, "Alle sammen" SKï¿½L !! ~~</p>
 <p>Hipp, hipp, hurra!
 <br>
 <br>~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~</p>
@@ -248,7 +248,7 @@ kommer det fra <a href="naering1.htm#christiangaard">Frank</a> med gitaren. ”Ja”
 <center>
 <table border="2" cols="1" width="40%" height="60" bgcolor="#87CEFA">
 <tr><td>
-<center><b>Bruk FØRRE knappen din...</b><br>
+<center><b>Bruk Fï¿½RRE knappen din...</b><br>
 <br><i>Use your BACK button..</i><br></center>
 </td></tr>
 </table>
