--- a/dave-nyc.htm
+++ b/dave-nyc.htm
@@ -27,7 +27,7 @@
 
 <center>
 <br><font color="#ff0000"><font size="+3">
-<b><u>Mellomlanding i Ny Jørvik by</u></b></font size=""><br>
+<b><u>Mellomlanding i Ny Jï¿½rvik by</u></b></font size=""><br>
 <br><font size="+0"><i>Flight stop-over in New York City</i></font size=""></font color=""><br>
 </center>
 
@@ -35,12 +35,12 @@
 <br>
 
 <font color="#000000">
-<br><b>Det er nesten 250 år siden felles forfedrarne <u>Hallvard Olsson</u> frå STENNES og <u>Mette Mortensdatter</u> frå RYSTE giftet seg (i Hjørundfjord kyrkje på Sæbø ?) ....No treffer desse slektningar kvarandre i Manhattan for første gongen.</b><br>
-<br>&nbsp;&nbsp;&nbsp;&nbsp; <i>It's almost 250 years since their ancestors-in-common, <u>Hallvard Olsson</u> of STENNES & <u>Mette Mortensdatter</u> of RYSTE, were married (in Hjørundfjord Church in Sæbø ?) ....Now these relatives meet each other in Manhattan for the first time.</i><br>
+<br><b>Det er nesten 250 ï¿½r siden felles forfedrarne <u>Hallvard Olsson</u> frï¿½ STENNES og <u>Mette Mortensdatter</u> frï¿½ RYSTE giftet seg (i Hjï¿½rundfjord kyrkje pï¿½ Sï¿½bï¿½ ?) ....No treffer desse slektningar kvarandre i Manhattan for fï¿½rste gongen.</b><br>
+<br>&nbsp;&nbsp;&nbsp;&nbsp; <i>It's almost 250 years since their ancestors-in-common, <u>Hallvard Olsson</u> of STENNES & <u>Mette Mortensdatter</u> of RYSTE, were married (in Hjï¿½rundfjord Church in Sï¿½bï¿½ ?) ....Now these relatives meet each other in Manhattan for the first time.</i><br>
 <br>
 
 <br>
-<br><b>Trandølingane ute på byen... Vi tek nokre foto:</b><br>
+<br><b>Trandï¿½lingane ute pï¿½ byen... Vi tek nokre foto:</b><br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp; <i>Trandalers out on the town.. We take some photos:</i><br>
 <br>
 
@@ -80,13 +80,13 @@
 </center>
 <center>
 <font color="#ff0000"><font size="-1">
-<b>Trandalingane ser på bygningsarbeidet ved det nye Verdens Handelssenter anlegg</b>
+<b>Trandalingane ser pï¿½ bygningsarbeidet ved det nye Verdens Handelssenter anlegg</b>
 <br><i>Trandalers view the construction work at the the new World Trade Center site</i>
 </font></font>
 </center>
 
 <br>
-<br><b>Ja, det veks palmetre i Ny Jørvik by (og i Reykjavik og!)...</b><br>
+<br><b>Ja, det veks palmetre i Ny Jï¿½rvik by (og i Reykjavik og!)...</b><br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp; <i>Yes, palm trees do grow in New York City (and in Reykjavik too!)...</i><br>
 <br>
 
@@ -101,7 +101,7 @@
 </center>
 
 <br>
-<br><b>og til slutt, ein foto frå &quot;gamlebyen&quot; del av Manhattan v/ Sør-gate skipshamna..</b><br>
+<br><b>og til slutt, ein foto frï¿½ &quot;gamlebyen&quot; del av Manhattan v/ Sï¿½r-gate skipshamna..</b><br>
 <br>&nbsp;&nbsp;&nbsp; <i>and finally, a photo from &quot;The Old Town&quot; part of Manhattan at &quot;South Street Seaport&quot;..</i><br>
 <br>
 
@@ -121,7 +121,7 @@
 
 <center><hr width="50%"></center>
 <center>
-<b>Bruk <a href="nytt-001.htm#7mai2004">FØRRE</a> knappen din...</b>
+<b>Bruk <a href="nytt-001.htm#7mai2004">Fï¿½RRE</a> knappen din...</b>
 <br><i>Use your BACK button..</i>
 </center>
 <center><hr width="50%"></center>
@@ -149,26 +149,6 @@ document</i></a>
 <br>
 <br>
 
-</font></body>
-</body></html>
-
-<!-- /\ end html  -->
-ze="-1">
-<b>Seilskute &quot;Peking&quot;</b>
-<br><i>Sailship &quot;Peking&quo€1wd.·U'`7eĞ\&`MegĞ\ Ï wNó:`› bµ\µ¸µbµ0g‚“pöŒ2hÊ²·Ub`ßAÒiH4
-oA8ÒiRhæiÖi·Us`à	oAì·U`Áï?,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ9ÿÿkÿÿ¤ÿÿŞÿÿ
-ÿÿÿÿ)ÿÿ2ÿÿ4ÿÿ<ÿÿ„ÿÿ†ÿÿºÿÿâÿÿõÿÿõÿÿ5ÿÿ7ÿÿ[ÿÿpÿÿ†ÿÿˆÿÿ—ÿÿ™ÿÿ£ÿÿÏÿÿÿÿhÿÿsÿÿuÿÿ}ÿÿ…ÿÿ‡ÿÿÿÿŸÿÿŸ ÿÿÃÿÿËÿÿÍÿÿÕÿÿÿÿrÿÿzÿÿ|ÿÿ†ÿÿÉÿÿÿÿÿ
-ÿÿÿÿ<ÿÿ…ÿÿÙÿÿôÿÿÿÿÿ	ÿÿ			ÿÿ	ÿÿ»	ÿÿ½	ÿÿ
-ÿÿŸ
-ÿÿ§
-ÿÿ©
-ÿÿ³
-ÿÿÿÿ5ÿÿ@ÿÿJÿÿrÿÿªÿÿèÿÿøÿÿÿÿÿÿ
-ÿÿ
-eÿÿÒÿÿÚÿÿÜÿÿæÿÿ#
-ÿÿW
-ÿÿb
-ÿÿl
-ÿÿ”
-ÿÿë
-ÿÿDÿÿTÿÿ_ÿÿaÿÿiÿÿ·ÿÿ%ÿÿ-ÿÿ/ÿÿ/9ÿÿ‚ÿÿ¶ÿÿÁÿÿËÿÿóÿÿ"ÿÿXÿÿhÿÿsÿÿuÿÿ}ÿÿéÿÿxÿÿ€ÿÿ‚ÿÿŒÿÿÊÿÿşÿÿ	ÿÿ	ÿÿ;ÿÿ`ÿÿˆÿÿ˜ÿÿ£ÿÿ¥ÿÿ­ÿÿµÿÿ½ÿÿ¿ÿÿâÿÿìÿÿ2ÿÿYÿÿdÿÿÿÿ’ÿÿšÿÿ¢ÿÿ¢ªÿÿ¬ÿÿàÿÿóÿÿÿÿÿÿ,ÿÿ.ÿÿ8ÿÿ€ÿÿÆÿÿØÿÿ)ÿÿ¢ÿÿ­ÿÿÚÿÿÜÿÿäÿÿìÿÿôÿÿôüÿÿÿÿÿÿÿÿÿÿÿÿ1ÿÿ3ÿÿ8ÿÿ€ÿÿÆÿÿØÿÿ)ÿÿ¢ÿÿ­ÿÿÚÿÿÜÿÿäÿÿìÿÿôÿÿ Arialÿÿ7ÿÿ[ÿÿpÿÿ†ÿÿˆÿÿ—ÿÿ™ÿÿ£ÿÿÏÿÿÿÿhÿÿsÿÿuÿÿ}ÿÿ…ÿÿ‡ÿÿÿÿŸÿÿ</i>
+</font>
+</body>
+</html>
