--- a/e-mail.htm
+++ b/e-mail.htm
@@ -9,11 +9,11 @@ data below. Meta tags help search engines identify the content of your page.  --
    <meta name="keywords" content="Trandal, Trandal krins, Trandal grendelag, Trandal
 grange, Trandal bygda, Trandahl, Tranndal, Trandall, Tranndall, Trandale, Trandohl, Trandoll,
 Trondal, Tanndall, Tanndal, Tanndale, Drandal, Drandall, Drandale, Trandalhatten,
-Trandalshatten, Trandal's hat, Trandaldalen, Trandal setrevegen, Trandal sætra, Trandal seter,
+Trandalshatten, Trandal's hat, Trandaldalen, Trandal setrevegen, Trandal sï¿½tra, Trandal seter,
 Trandalsangen, Trandalsongen, Trandals song, Songen om Trandal, Song of Trandal, Ytre
-Trandal, Indre Trandal, Inngarden, Bakkene, Rønning, Ronning, Roenning, Rynningen, Nes,
-Naes, Næs, Storeide, Fylling, Hauge, Måseidvåg, Maaseidvaag, Naustenget, Brekke, Christian
-Gaard, Trandal Fjordhytter, Hjørundfjord, Hjorundfjord, Hjoerundfjord, Jorringfjord, Fjordenes
+Trandal, Indre Trandal, Inngarden, Bakkene, Rï¿½nning, Ronning, Roenning, Rynningen, Nes,
+Naes, Nï¿½s, Storeide, Fylling, Hauge, Mï¿½seidvï¿½g, Maaseidvaag, Naustenget, Brekke, Christian
+Gaard, Trandal Fjordhytter, Hjï¿½rundfjord, Hjorundfjord, Hjoerundfjord, Jorringfjord, Fjordenes
 perle, Pearl of the fjords, Fiords, Noreg, Norge, Norway">
    <meta name="description" content="Trandal - - Trandahl - - Trandall i Noreg, in Norway,
 Norge">
@@ -52,9 +52,9 @@ Trandal - - - Trandahl - - - Trandall</font></font><center>
 </font></font></center>
 <font size="+0">
 
-<br><b>Personleg, <u>privat</u> e-post adresser er vist på denne vevsida som teikninger (JPG eller GIF fil.) Det vanskeleg gjer ei direkte lenkja til e-post adressa, men denne måten hindrer dei automatisk "spam" roboter å fange inn adressene.<br>
+<br><b>Personleg, <u>privat</u> e-post adresser er vist pï¿½ denne vevsida som teikninger (JPG eller GIF fil.) Det vanskeleg gjer ei direkte lenkja til e-post adressa, men denne mï¿½ten hindrer dei automatisk "spam" roboter ï¿½ fange inn adressene.<br>
 <br>
-<br>Ein håpa dermed at dei oppslåtte e-post adressene ikkje får "spam."</b><br>
+<br>Ein hï¿½pa dermed at dei oppslï¿½tte e-post adressene ikkje fï¿½r "spam."</b><br>
 <br>
 <br><center>~ ~ ~ ~ ~ ~ ~ ~ ~</center><br>
 <br>
@@ -67,7 +67,7 @@ Trandal - - - Trandahl - - - Trandall</font></font><center>
 <center>
 <table border="2" cols="1" width="40%" height="60" bgcolor="#87CEFA">
 <tr><td>
-<center><b>Bruk FØRRE knappen din...</b><br>
+<center><b>Bruk Fï¿½RRE knappen din...</b><br>
 <br><i>Use your BACK button..</i><br></center>
 </td></tr>
 </table>
@@ -93,29 +93,6 @@ document</i></a>] &nbsp; &nbsp;
 
 <br>
 
-</font></center></center></body>
-</body></html>
-
-<!-- /\ end html  -->
-enter><font color="#000000"><font size="+3">
-<br><b><u>E-POST</u></b><br></font>
-<font size="+2">
-<br> <i>E-mail€wdV7^)`7eg(`Megg Ç@„wPó<`› ş—x’Ä™ş—0g“pöŒ2hæ7^d`7Trh¤4
-/K*rhzh~hvh7^u`à	/KHÈ7^‘`Áßc,2€—ÿÿŸÿÿ¨ÿÿÿÿhÿÿ»ÿÿ½ÿÿ
-ÿÿMÿÿ£ÿÿÿÿUÿÿµÿÿÿÿeÿÿÁÿÿ!ÿÿ]ÿÿ¹ÿÿÂÿÿÂóÿÿ,ÿÿ.ÿÿnÿÿpÿÿyÿÿÿÿÉÿÿËÿÿÚÿÿôÿÿÿÿ;ÿÿÿÿÄÿÿøÿÿÿÿ;ÿÿUÿÿcÿÿceÿÿ‰ÿÿ‹ÿÿ ÿÿÏÿÿ	ÿÿ	ÿÿ<	ÿÿb	ÿÿr	ÿÿŠ	ÿÿª	ÿÿº	ÿÿ¼	ÿÿµ
-ÿÿ¼
-ÿÿÿÿÿÿBÿÿIÿÿIyÿÿ€ÿÿáÿÿãÿÿñÿÿóÿÿıÿÿA
-ÿÿK
-ÿÿz
-ÿÿ«
-ÿÿ·
-ÿÿÁ
-ÿÿÌ
-ÿÿÎ
-ÿÿÕ
-ÿÿ×
-ÿÿá
-ÿÿ)ÿÿmÿÿmÿÿÓÿÿ"ÿÿMÿÿXÿÿ|ÿÿ~ÿÿŒÿÿšÿÿ¨ÿÿ¶ÿÿ¸ÿÿÜÿÿ6ÿÿZÿÿ\ÿÿcÿÿeÿÿnÿÿwÿÿwyÿÿÿÿ’ÿÿMÿÿXÿÿ|ÿÿ~ÿÿŒÿÿšÿÿ¨ÿÿ¶ÿÿ¸ÿÿÜÿÿ6ÿÿZÿÿ\ÿÿcÿÿeÿÿnÿÿwÿÿ ArialCOLS=1 WIDTH="40%" HEIGHT="60" BGCOLOR="#87CEFA" >
-<tr><td>
-<center><b>Bruk FØRRE knappen din...</b><br>
-<br><i></i></center></td></tr></i></font></font>
+</font></center></center>
+</body>
+</html>
