--- a/fil-0000.htm
+++ b/fil-0000.htm
@@ -86,7 +86,7 @@ COMMENTS -->
 <tr valign="top"><td>~ </td><td>~ ~</td></tr>
 <tr valign="top"><td>- </td><td><b>forslag1</b>.htm = INNLEGG, Input</td></tr>
 <tr valign="top"><td>- </td><td><b>medlem01</b>.htm = GRENDELAG, Grange</td></tr>
-<tr valign="top"><td>- </td><td><b>naering1</b>.htm = NÆRING, Business</td></tr>
+<tr valign="top"><td>- </td><td><b>naering1</b>.htm = Nï¿½RING, Business</td></tr>
 <tr valign="top"><td>- </td><td><b>nytt2005.</b>.htm = NYTT, News (2005)</td></tr>
 <tr valign="top"><td>- </td><td><b>soge-001</b>.htm = SOGE, History</td></tr>
 <tr valign="top"><td>~ </td><td>~ ~</td></tr>
@@ -178,7 +178,7 @@ COMMENTS -->
 <center>
 <table border="2" cols="1" width="40%" height="60" bgcolor="#87cefa">
 <tr><td>
-<center><b>Bruk FØRRE knappen din...</b><br>
+<center><b>Bruk Fï¿½RRE knappen din...</b><br>
 <br><i>Use your BACK button..</i><br></center>
 </td></tr>
 </table>
@@ -222,22 +222,4 @@ reserved.</font></center>
 <center><hr width="100%"></center>
 
 </body>
-</body></html>
-
-<!-- /\ end html  -->
-"><td>- </td>€ó w`òdg°š°š&`Meg°š ÇÀ*ßcó:`› ^ŸØàŸ^Ÿ0g“pöŒ2h~’gVb`'^i44
-/^Pi¢iÖišigVs`à	/^HgV`ÁON,€—ÿÿŸÿÿ¨ÿÿÿÿhÿÿ»ÿÿ½ÿÿ	ÿÿLÿÿzÿÿ«ÿÿÜÿÿÿÿ>ÿÿ@ÿÿ\ÿÿeÿÿgÿÿoÿÿ·ÿÿ·¹ÿÿÈÿÿâÿÿÿÿ%ÿÿ5ÿÿcÿÿ–ÿÿíÿÿÿÿ.ÿÿHÿÿVÿÿXÿÿ›ÿÿàÿÿÿÿÿÿ+ÿÿZÿÿZÿÿèÿÿÿÿÿÿÿÿÿÿ}ÿÿÿÿ•ÿÿåÿÿÿÿ•ÿÿ—ÿÿçÿÿéÿÿïÿÿğÿÿ/	ÿÿ4	ÿÿ\	ÿÿ\	 	ÿÿØ	ÿÿ
-ÿÿ^
-ÿÿg
-ÿÿh
-ÿÿm
-ÿÿ™
-ÿÿ
-ÿÿÆ
-ÿÿMÿÿVÿÿXÿÿ]ÿÿ¦ÿÿ«ÿÿÓÿÿ.ÿÿoÿÿxÿÿxyÿÿ~ÿÿĞÿÿÕÿÿıÿÿO
-ÿÿ}
-ÿÿÌ
-ÿÿÿÿoÿÿÂÿÿÿÿ>ÿÿuÿÿ¬ÿÿãÿÿÿÿQÿÿˆÿÿ¿ÿÿ¿öÿÿ-ÿÿdÿÿ›ÿÿÒÿÿ	ÿÿ@ÿÿwÿÿÿÿƒÿÿˆÿÿÉÿÿÎÿÿöÿÿ+ÿÿ`ÿÿ—ÿÿ ÿÿ¢ÿÿ§ÿÿ§òÿÿ÷ÿÿÿÿVÿÿÿÿÄÿÿûÿÿÿÿÿÿÿÿSÿÿXÿÿ€ÿÿ·ÿÿîÿÿ"ÿÿWÿÿÿÿ—ÿÿ™ÿÿ™ÿÿÜÿÿáÿÿ	ÿÿ@ÿÿwÿÿ®ÿÿåÿÿîÿÿğÿÿõÿÿ6ÿÿ;ÿÿcÿÿšÿÿÑÿÿÿÿ?ÿÿvÿÿ¬ÿÿ¬ãÿÿÿÿ#ÿÿ%ÿÿ*ÿÿjÿÿoÿÿ—ÿÿÎÿÿÿÿ<ÿÿsÿÿ|ÿÿ}ÿÿ†ÿÿˆÿÿ–ÿÿ˜ÿÿ¢ÿÿêÿÿêôÿÿ#ÿÿTÿÿ`ÿÿiÿÿtÿÿvÿÿ}ÿÿÿÿ‰ÿÿİÿÿÿÿAÿÿ¸ÿÿòÿÿÿÿÿÿÿÿ9ÿÿ;ÿÿ;IÿÿWÿÿeÿÿsÿÿuÿÿ§ÿÿøÿÿÿÿJÿÿPÿÿVÿÿ~ÿÿ˜ÿÿ£ÿÿ¹ÿÿÖÿÿİÿÿäÿÿ÷ÿÿE ÿÿE ` ÿÿ’ ÿÿ” ÿÿ¢ ÿÿÆ ÿÿÈ ÿÿÑ ÿÿÚ ÿÿÜ ÿÿó ÿÿõ ÿÿ~ÿÿ˜ÿÿ£ÿÿ¹ÿÿÖÿÿİÿÿäÿÿ÷ÿÿE ÿÿ Arialst of MIDI sound (MID) files:
-<br>
-<table cellspacing="0" cellpadding="1">
-<tr valign="top"><td>- </td></tr></table>
+</html>
