--- a/forslag1.htm
+++ b/forslag1.htm
@@ -86,7 +86,7 @@
 <p>1. - <b>Send <a href="#helsing">helsing</a>?... Skriv i<a href="#gjestebok"> GJESTEBOK</a></b><br>
 <br> &nbsp; &nbsp; &nbsp; &nbsp; <i>Send <u>greetings</u>?... Write in <u>Guestbook</u></i><br>
 <br>
-<br>2. - <b><a href="#poll">MEINING</a>?... Deltek i meiningsmålingen..</b><br>
+<br>2. - <b><a href="#poll">MEINING</a>?... Deltek i meiningsmï¿½lingen..</b><br>
 <br>&nbsp; &nbsp; &nbsp; &nbsp; <i><u>Opinion</u>?... Take part in the poll..</i><br>
 <br>
 <br>3. - <b><a href="#forslag">FORSLAGSKASSA:</a> Gode r&aring;d?.. Rettingar til vevsidene?.. Annet?.. </b><br>
@@ -522,7 +522,7 @@ Box</i></a><br>
 
 <br>|||||||||||||||||||||||||<br>
 
-<br><center><b>Trandal - - Trandahl - - Trandall - - Tranndall - - Thrandall - - (Ğrandall ?)
+<br><center><b>Trandal - - Trandahl - - Trandall - - Tranndall - - Thrandall - - (ï¿½randall ?)
 </b></center>
 
 <center>
@@ -530,7 +530,7 @@ Box</i></a><br>
 
 <img src="img/trandal2.bmp" alt="Trandal" hspace="5" vspace="5" border="1" height="44" width="154">
 
-<img src="img/drandall.jpg" alt="Ğrandall ..?" hspace="5" vspace="5" border="1" height="44" width="175">
+<img src="img/drandall.jpg" alt="ï¿½randall ..?" hspace="5" vspace="5" border="1" height="44" width="175">
 </center>
 
 <p><b>Eit Tusen &Aring;r... pluss?</b><br>
@@ -1106,7 +1106,7 @@ SOCIALIZATION:<br>
 <br>("The Borg Collective" in TV-series "Star Trek")</i><br>
 
 <p>
-"UTKANT STRØK"<br>
+"UTKANT STRï¿½K"<br>
 <br><i>"The first great thing is <b>to find yourself</b>, and for that you need solitude and contemplation: at least sometimes. I tell you, deliverence will not come from the rushing, noisy centres of civilization. It will come from the lonely places."<br>
 <br>(Fridtjof Nansen, explorer & humanitarian, born 10th Oct. 1861)</i><br>
 
@@ -1588,33 +1588,6 @@ reserved</font>
 <p><br></p>
 <br>
 
-</font></font></p></i></p></body>
-</body></html>
-<!-- /\ end html  -->
- and sugar mix)
-<br>Solb&aelig;rsaft (black current juice)
-<br>Blodp&oslash;lse (black sausage)
-<br>Smol€+w+,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ>ÿÿpÿÿ©ÿÿßÿÿ"ÿÿ$ÿÿIÿÿRÿÿTÿÿ\ÿÿ¤ÿÿ¦ÿÿÚÿÿíÿÿÿÿÿÿ/ÿÿ1ÿÿGÿÿQÿÿ˜ÿÿØÿÿÚÿÿ%ÿÿ/ÿÿ€ÿÿÊÿÿĞÿÿÒÿÿ'ÿÿqÿÿwÿÿyÿÿÑÿÿÿÿ!ÿÿ#ÿÿ„ÿÿÎÿÿÔÿÿÖÿÿ+ÿÿuÿÿ{ÿÿ†ÿÿšÿÿ¥ÿÿ§ÿÿ×ÿÿÿÿ,ÿÿ.ÿÿ8ÿÿfÿÿ¢ÿÿ¢­ÿÿ¶ÿÿ¸ÿÿÀÿÿÂÿÿÌÿÿ	ÿÿp	ÿÿ„	ÿÿ	ÿÿ‘	ÿÿ›	ÿÿ°	ÿÿä	ÿÿ
-ÿÿG
-ÿÿ{
-ÿÿ°
-ÿÿé
-ÿÿ¡ÿÿ¡¬ÿÿ¼ÿÿ¾ÿÿÆÿÿŞÿÿÿÿ/ÿÿ>ÿÿGÿÿdÿÿfÿÿtÿÿÜÿÿ>
-ÿÿF
-ÿÿ˜
-ÿÿğ
-ÿÿø
-ÿÿkÿÿäÿÿäìÿÿoÿÿñÿÿùÿÿdÿÿëÿÿóÿÿÿÿrÿÿØÿÿàÿÿFÿÿ¦ÿÿµÿÿ·ÿÿÀÿÿÂÿÿÇÿÿêÿÿôÿÿôÿÿ-ÿÿ8ÿÿ[ÿÿaÿÿcÿÿrÿÿtÿÿ~ÿÿÆÿÿÿÿ:ÿÿ~ÿÿ²ÿÿÿÿÿÿÿÿÿÿ_ÿÿŸÿÿŸíÿÿÿÿÿ
-ÿÿÿÿÿÿÿÿ#ÿÿ(ÿÿ1ÿÿ6ÿÿ?ÿÿDÿÿFÿÿKÿÿeÿÿ}ÿÿ¤ÿÿãÿÿUÿÿÕÿÿÕÿÿ/ÿÿ5ÿÿ7ÿÿUÿÿWÿÿÿÿäÿÿêÿÿìÿÿ#ÿÿeÿÿkÿÿmÿÿŸÿÿãÿÿéÿÿëÿÿÿÿAÿÿA…ÿÿèÿÿYÿÿ_ÿÿaÿÿfÿÿ”ÿÿÊÿÿÌÿÿVÿÿXÿÿ/ÿÿ1ÿÿÿÿÿÿ5ÿÿaÿÿcÿÿÿÿƒÿÿƒÉÿÿÿÿ%ÿÿ'ÿÿ,ÿÿOÿÿYÿÿqÿÿ–ÿÿ¡ÿÿÄÿÿÊÿÿÌÿÿÔÿÿÖÿÿÛÿÿğÿÿ ÿÿ? ÿÿ} ÿÿ} Ä ÿÿì ÿÿ! ÿÿ
-!  ÿÿ!  ÿÿ!  ÿÿi!  ÿÿt!  ÿÿv!  ÿÿÑ!  ÿÿ""  ÿÿD"  ÿÿr"  ÿÿt"  ÿÿª"  ÿÿø"  ÿÿH#  ÿÿ#  ÿÿı#  ÿÿ$  ÿÿ $  $  ÿÿ
-$  ÿÿ$  ÿÿ$  ÿÿA$  ÿÿr$  ÿÿº$  ÿÿ%  ÿÿ%  ÿÿ%  ÿÿ%  ÿÿ#%  ÿÿs%  ÿÿ~%  ÿÿ€%  ÿÿ%  ÿÿ½%  ÿÿò%  ÿÿ&  ÿÿa&  ÿÿ a&  l&  ÿÿx&  ÿÿ§&  ÿÿZ'  ÿÿ‚'  ÿÿ'  ÿÿ±'  ÿÿİ'  ÿÿè'  ÿÿê'  ÿÿù'  ÿÿû'  ÿÿ(  ÿÿM(  ÿÿ(  ÿÿÁ(  ÿÿ)  ÿÿ9)  ÿÿˆ)  ÿÿ“)  ÿÿ “)  •)  ÿÿŸ)  ÿÿæ)  ÿÿ&*  ÿÿt*  ÿÿ†*  ÿÿ‘*  ÿÿ“*  ÿÿœ*  ÿÿ¡*  ÿÿª*  ÿÿ¯*  ÿÿ¸*  ÿÿ½*  ÿÿ¿*  ÿÿÄ*  ÿÿŞ*  ÿÿ+  ÿÿ&+  ÿÿc+  ÿÿ c+  —+  ÿÿ¸+  ÿÿÓ+  ÿÿÙ+  ÿÿÛ+  ÿÿé+  ÿÿd,  ÿÿÔ,  ÿÿS-  ÿÿÚ-  ÿÿO.  ÿÿØ.  ÿÿ//  ÿÿÉ/  ÿÿR0  ÿÿÃ0  ÿÿ1  ÿÿ°1  ÿÿ½1  ÿÿ¿1  ÿÿ ¿1  Á1  ÿÿÆ1  ÿÿ2  ÿÿ<2  ÿÿŸ2  ÿÿæ2  ÿÿ3  ÿÿ3  ÿÿ3  ÿÿ*3  ÿÿ,3  ÿÿ63  ÿÿ~3  ÿÿÎ3  ÿÿò3  ÿÿ64  ÿÿj4  ÿÿ¹4  ÿÿÄ4  ÿÿÆ4  ÿÿ Æ4  Ğ4  ÿÿ5  ÿÿW5  ÿÿ¤5  ÿÿ¯5  ÿÿ±5  ÿÿÀ5  ÿÿÏ5  ÿÿŞ5  ÿÿà5  ÿÿÿ5  ÿÿ6  ÿÿq6  ÿÿî6  ÿÿş6  ÿÿ7  ÿÿ7  ÿÿ)7  ÿÿ…7  ÿÿÀ7  ÿÿ À7  Ë7  ÿÿÍ7  ÿÿİ7  ÿÿß7  ÿÿ8  ÿÿ^8  ÿÿ‡8  ÿÿÔ8  ÿÿ9  ÿÿ_9  ÿÿe9  ÿÿg9  ÿÿp9  ÿÿr9  ÿÿw9  ÿÿ³9  ÿÿí9  ÿÿP:  ÿÿ—:  ÿÿÄ:  ÿÿ Ä:  Ê:  ÿÿÌ:  ÿÿÛ:  ÿÿİ:  ÿÿç:  ÿÿ/;  ÿÿ;  ÿÿ£;  ÿÿç;  ÿÿ<  ÿÿj<  ÿÿu<  ÿÿw<  ÿÿ<  ÿÿÈ<  ÿÿ=  ÿÿU=  ÿÿ`=  ÿÿb=  ÿÿh=  ÿÿ h=  x=  ÿÿz=  ÿÿƒ=  ÿÿˆ=  ÿÿ‘=  ÿÿ–=  ÿÿ˜=  ÿÿ=  ÿÿ½=  ÿÿ'>  ÿÿ˜>  ÿÿ¼>  ÿÿÆ>  ÿÿı>  ÿÿ9?  ÿÿD?  ÿÿF?  ÿÿd?  ÿÿf?  ÿÿk?  ÿÿ k?  “?  ÿÿ»?  ÿÿ½?  ÿÿÅ?  ÿÿÇ?  ÿÿ#@  ÿÿs@  ÿÿ–@  ÿÿ»@  ÿÿŞ@  ÿÿA  ÿÿ&A  ÿÿKA  ÿÿvA  ÿÿ§A  ÿÿÒA  ÿÿB  ÿÿgB  ÿÿÌB  ÿÿÎB  ÿÿ ÎB  úC  ÿÿ_D  ÿÿËD  ÿÿûD  ÿÿfE  ÿÿ‚E  ÿÿôE  ÿÿF  ÿÿLF  ÿÿgF  ÿÿ¸F  ÿÿÖF  ÿÿ!G  ÿÿFG  ÿÿ’G  ÿÿ·G  ÿÿH  ÿÿ"H  ÿÿuH  ÿÿ¥H  ÿÿ ¥H  ÌH  ÿÿëH  ÿÿ3I  ÿÿOI  ÿÿŸI  ÿÿ½I  ÿÿJ  ÿÿrJ  ÿÿãJ  ÿÿNK  ÿÿ¦K  ÿÿÃK  ÿÿL  ÿÿ(L  ÿÿ|L  ÿÿ¤L  ÿÿıL  ÿÿ:M  ÿÿ„M  ÿÿ¡M  ÿÿ ¡M  ªM  ÿÿ°M  ÿÿ²M  ÿÿ·M  ÿÿóM  ÿÿ-N  ÿÿN  ÿÿ×N  ÿÿO  ÿÿ
-O  ÿÿO  ÿÿO  ÿÿO  ÿÿ'O  ÿÿoO  ÿÿ¿O  ÿÿãO  ÿÿ'P  ÿÿ[P  ÿÿªP  ÿÿ ªP  µP  ÿÿ·P  ÿÿÁP  ÿÿQ  ÿÿHQ  ÿÿ•Q  ÿÿ Q  ÿÿ¢Q  ÿÿ¨Q  ÿÿ¸Q  ÿÿºQ  ÿÿÃQ  ÿÿÈQ  ÿÿÑQ  ÿÿÖQ  ÿÿØQ  ÿÿ÷Q  ÿÿüQ  ÿÿ"R  ÿÿIR  ÿÿ IR  hR  ÿÿzR  ÿÿµR  ÿÿïR  ÿÿ*S  ÿÿdS  ÿÿkS  ÿÿmS  ÿÿ	T  ÿÿ–T  ÿÿ˜T  ÿÿŞT  ÿÿgU  ÿÿBV  ÿÿHV  ÿÿJV  ÿÿOV  ÿÿ‹V  ÿÿÅV  ÿÿ(W  ÿÿ (W  oW  ÿÿœW  ÿÿ¢W  ÿÿ¤W  ÿÿ³W  ÿÿµW  ÿÿ¿W  ÿÿX  ÿÿWX  ÿÿ{X  ÿÿ¿X  ÿÿóX  ÿÿBY  ÿÿMY  ÿÿOY  ÿÿYY  ÿÿ Y  ÿÿàY  ÿÿ-Z  ÿÿ8Z  ÿÿ 8Z  :Z  ÿÿ@Z  ÿÿPZ  ÿÿRZ  ÿÿ[Z  ÿÿ`Z  ÿÿiZ  ÿÿnZ  ÿÿpZ  ÿÿŒZ  ÿÿ‘Z  ÿÿ[  ÿÿ[  ÿÿŸ[  ÿÿÃ[  ÿÿÅ[  ÿÿ$\  ÿÿ3\  ÿÿ5\  ÿÿ?\  ÿÿ ?\  r\  ÿÿ­\  ÿÿ¯\  ÿÿ×\  ÿÿ]  ÿÿ]  ÿÿA]  ÿÿ|]  ÿÿ‡]  ÿÿ‰]  ÿÿ¶]  ÿÿø]  ÿÿú]  ÿÿ©_  ÿÿ«_  ÿÿKa  ÿÿMa  ÿÿva  ÿÿ±a  ÿÿ³a  ÿÿ ³a  !b  ÿÿ¥b  ÿÿÌb  ÿÿèb  ÿÿLc  ÿÿhc  ÿÿƒc  ÿÿçc  ÿÿd  ÿÿ/d  ÿÿåd  ÿÿçd  ÿÿìd  ÿÿe  ÿÿ‘e  ÿÿf  ÿÿ‡f  ÿÿëf  ÿÿ`g  ÿÿŞg  ÿÿ Şg  h  ÿÿi  ÿÿ•i  ÿÿªj  ÿÿ¬j  ÿÿšl  ÿÿ­l  ÿÿ¯l  ÿÿ†n  ÿÿ•n  ÿÿ—n  ÿÿœn  ÿÿØn  ÿÿo  ÿÿuo  ÿÿ¼o  ÿÿéo  ÿÿïo  ÿÿño  ÿÿ p  ÿÿ  p  p  ÿÿp  ÿÿTp  ÿÿ¤p  ÿÿÈp  ÿÿq  ÿÿ@q  ÿÿq  ÿÿšq  ÿÿœq  ÿÿ¦q  ÿÿíq  ÿÿ-r  ÿÿzr  ÿÿ…r  ÿÿ‡r  ÿÿr  ÿÿr  ÿÿŸr  ÿÿ¨r  ÿÿ ¨r  ­r  ÿÿ¶r  ÿÿ»r  ÿÿ½r  ÿÿÔr  ÿÿÙr  ÿÿs  ÿÿHs  ÿÿls  ÿÿns  ÿÿÿs  ÿÿUt  ÿÿ[t  ÿÿ½t  ÿÿu  ÿÿyu  ÿÿËu  ÿÿÑu  ÿÿÓu  ÿÿØu  ÿÿ Øu  v  ÿÿNv  ÿÿ±v  ÿÿøv  ÿÿ%w  ÿÿ+w  ÿÿ-w  ÿÿ<w  ÿÿ>w  ÿÿHw  ÿÿw  ÿÿàw  ÿÿx  ÿÿHx  ÿÿ|x  ÿÿËx  ÿÿÖx  ÿÿØx  ÿÿâx  ÿÿ)y  ÿÿ )y  iy  ÿÿ¶y  ÿÿÁy  ÿÿÃy  ÿÿÉy  ÿÿÙy  ÿÿÛy  ÿÿäy  ÿÿéy  ÿÿòy  ÿÿ÷y  ÿÿùy  ÿÿz  ÿÿz  ÿÿWz  ÿÿ™z  ÿÿ½z  ÿÿÜz  ÿÿ{  ÿÿš{  ÿÿ š{  |  ÿÿ|  ÿÿ}  ÿÿ
-}  ÿÿ{  ÿÿ’€  ÿÿ˜€  ÿÿš€  ÿÿ’  ÿÿ”  ÿÿÑ  ÿÿ‚  ÿÿF‚  ÿÿ€‚  ÿÿ»‚  ÿÿõ‚  ÿÿ÷‚  ÿÿNƒ  ÿÿPƒ  ÿÿUƒ  ÿÿ Uƒ  ‘ƒ  ÿÿËƒ  ÿÿ.„  ÿÿu„  ÿÿ¢„  ÿÿ¨„  ÿÿª„  ÿÿ¹„  ÿÿ»„  ÿÿÅ„  ÿÿ
-…  ÿÿ]…  ÿÿ…  ÿÿÅ…  ÿÿù…  ÿÿH†  ÿÿS†  ÿÿU†  ÿÿ_†  ÿÿ¦†  ÿÿ ¦†  æ†  ÿÿ3‡  ÿÿ>‡  ÿÿ@‡  ÿÿF‡  ÿÿV‡  ÿÿX‡  ÿÿa‡  ÿÿf‡  ÿÿo‡  ÿÿt‡  ÿÿv‡  ÿÿ‡  ÿÿ•‡  ÿÿ³‡  ÿÿÓ‡  ÿÿò‡  ÿÿô‡  ÿÿ2ˆ  ÿÿ®ˆ  ÿÿ ®ˆ  °ˆ  ÿÿìˆ  ÿÿ3‰  ÿÿw‰  ÿÿy‰  ÿÿÊ‰  ÿÿŠ  ÿÿŠ  ÿÿaŠ  ÿÿ¨Š  ÿÿ±Š  ÿÿ·Š  ÿÿ¹Š  ÿÿíŠ  ÿÿ÷Š  ÿÿ&‹  ÿÿ,‹  ÿÿ2‹  ÿÿ=‹  ÿÿj‹  ÿÿ j‹  •‹  ÿÿ¡‹  ÿÿ£‹  ÿÿÒ  ÿÿÔ  ÿÿ¬‘  ÿÿ®‘  ÿÿ¶‘  ÿÿ¸‘  ÿÿÉ‘  ÿÿP’  ÿÿÎ’  ÿÿK“  ÿÿT“  ÿÿV“  ÿÿ^“  ÿÿ¡“  ÿÿä“  ÿÿæ“  ÿÿ”  ÿÿ ”  ˜•  ÿÿš•  ÿÿİ•  ÿÿ –  ÿÿ"–  ÿÿ'–  ÿÿA–  ÿÿ–  ÿÿ¾–  ÿÿ"—  ÿÿ}—  ÿÿƒ—  ÿÿ›—  ÿÿ¿—  ÿÿŞ—  ÿÿy˜  ÿÿ˜  ÿÿ…˜  ÿÿ˜  ÿÿ˜  ÿÿ ˜  ˜˜  ÿÿŸ˜  ÿÿ¦˜  ÿÿ°˜  ÿÿ»˜  ÿÿÁ˜  ÿÿó˜  ÿÿõ˜  ÿÿ™  ÿÿ"™  ÿÿ'™  ÿÿ1™  ÿÿ:™  ÿÿ@™  ÿÿF™  ÿÿL™  ÿÿ]™  ÿÿ™  ÿÿ¹™  ÿÿä™  ÿÿ ä™  š  ÿÿ:š  ÿÿeš  ÿÿš  ÿÿ”š  ÿÿÇš  ÿÿúš  ÿÿ›  ÿÿ
-›  ÿÿ›  ÿÿ›  ÿÿ&›  ÿÿ(›  ÿÿ-›  ÿÿˆ›  ÿÿå›  ÿÿ9œ  ÿÿSœ  ÿÿXœ  ÿÿZœ  ÿÿ Zœ  œ  ÿÿ¦œ  ÿÿ¼œ  ÿÿõœ  ÿÿüœ  ÿÿ  ÿÿG  ÿÿS  ÿÿj  ÿÿ  ÿÿ  ÿÿ   ÿÿ  ÿÿ‡  ÿÿà  ÿÿ9Ÿ  ÿÿ’Ÿ  ÿÿ”Ÿ  ÿÿ£Ÿ  ÿÿ¬Ÿ  ÿÿ ¬Ÿ  ³Ÿ  ÿÿÖŸ  ÿÿØŸ  ÿÿéŸ  ÿÿ`   ÿÿ¿   ÿÿ¡  ÿÿu¡  ÿÿÎ¡  ÿÿĞ¡  ÿÿß¡  ÿÿè¡  ÿÿô¡  ÿÿ¢  ÿÿ"¢  ÿÿN¢  ÿÿU¢  ÿÿk¢  ÿÿ•¢  ÿÿ¡¢  ÿÿ ¡¢  ¸¢  ÿÿÛ¢  ÿÿİ¢  ÿÿî¢  ÿÿk£  ÿÿÄ£  ÿÿ¤  ÿÿv¤  ÿÿÏ¤  ÿÿÑ¤  ÿÿÓ¤  ÿÿ"¥  ÿÿr¥  ÿÿ¼¥  ÿÿÂ¥  ÿÿÈ¥  ÿÿÊ¥  ÿÿÙ¥  ÿÿÛ¥  ÿÿä¥  ÿÿ ä¥  ë¥  ÿÿ¦  ÿÿ¦  ÿÿ!¦  ÿÿ›¦  ÿÿ-§  ÿÿ §  ÿÿ0¨  ÿÿ‰¨  ÿÿ‹¨  ÿÿ“¨  ÿÿŞ¨  ÿÿ©  ÿÿN©  ÿÿr©  ÿÿÃ©  ÿÿª  ÿÿª  ÿÿ!ª  ÿÿ#ª  ÿÿ #ª  ,ª  ÿÿ8ª  ÿÿBª  ÿÿDª  ÿÿMª  ÿÿSª  ÿÿUª  ÿÿZª  ÿÿ–ª  ÿÿĞª  ÿÿ3«  ÿÿz«  ÿÿ§«  ÿÿ­«  ÿÿ¯«  ÿÿ¾«  ÿÿÀ«  ÿÿÊ«  ÿÿ¬  ÿÿb¬  ÿÿ b¬  †¬  ÿÿÊ¬  ÿÿş¬  ÿÿM­  ÿÿX­  ÿÿZ­  ÿÿd­  ÿÿ«­  ÿÿë­  ÿÿ8®  ÿÿC®  ÿÿE®  ÿÿK®  ÿÿ[®  ÿÿ]®  ÿÿf®  ÿÿk®  ÿÿt®  ÿÿy®  ÿÿ{®  ÿÿ {®  •®  ÿÿš®  ÿÿ°®  ÿÿĞ®  ÿÿô®  ÿÿI¯  ÿÿœ¯  ÿÿ¯  ÿÿ¶¯  ÿÿq±  ÿÿw±  ÿÿy±  ÿÿƒ±  ÿÿ¾±  ÿÿü±  ÿÿ²  ÿÿ	²  ÿÿ7´  ÿÿ=´  ÿÿ?´  ÿÿ ?´  [´  ÿÿi´  ÿÿµ  ÿÿŸµ  ÿÿª¶  ÿÿ¬¶  ÿÿú·  ÿÿ	¸  ÿÿ¸  ÿÿv¹  ÿÿ|¹  ÿÿ~¹  ÿÿŒ¹  ÿÿæº  ÿÿõº  ÿÿ÷º  ÿÿ»  ÿÿ/»  ÿÿÀ½  ÿÿÈ½  ÿÿ È½  ¾  ÿÿ¾  ÿÿ!¾  ÿÿ/¾  ÿÿ­¾  ÿÿç¾  ÿÿé¾  ÿÿ}¿  ÿÿ¶¿  ÿÿ¸¿  ÿÿ6À  ÿÿpÀ  ÿÿrÀ  ÿÿıÀ  ÿÿ7Á  ÿÿ9Á  ÿÿÅÁ  ÿÿÿÁ  ÿÿÂ  ÿÿÂ  ÿÿ Â  +Â  ÿÿKÂ  ÿÿQÂ  ÿÿ]Ä  ÿÿcÄ  ÿÿeÄ  ÿÿsÄ  ÿÿ^Å  ÿÿËÅ  ÿÿÚÅ  ÿÿÜÅ  ÿÿáÅ  ÿÿ{Æ  ÿÿÆ  ÿÿƒÆ  ÿÿˆÆ  ÿÿÄÆ  ÿÿşÆ  ÿÿaÇ  ÿÿ¨Ç  ÿÿ ¨Ç  ÕÇ  ÿÿÛÇ  ÿÿİÇ  ÿÿìÇ  ÿÿîÇ  ÿÿøÇ  ÿÿ@È  ÿÿÈ  ÿÿ´È  ÿÿøÈ  ÿÿ,É  ÿÿ{É  ÿÿ†É  ÿÿˆÉ  ÿÿ’É  ÿÿÙÉ  ÿÿÊ  ÿÿfÊ  ÿÿqÊ  ÿÿsÊ  ÿÿ sÊ  yÊ  ÿÿ‰Ê  ÿÿ‹Ê  ÿÿ”Ê  ÿÿ™Ê  ÿÿ¢Ê  ÿÿ§Ê  ÿÿ©Ê  ÿÿ¿Ê  ÿÿÄÊ  ÿÿÿÊ  ÿÿ'Ë  ÿÿFË  ÿÿHË  ÿÿwË  ÿÿ}Ë  ÿÿéË  ÿÿSÌ  ÿÿÄÌ  ÿÿÍ  ÿÿ Í  ŸÍ  ÿÿÎ  ÿÿzÎ  ÿÿéÎ  ÿÿJÏ  ÿÿ¤Ï  ÿÿĞ  ÿÿqĞ  ÿÿÏĞ  ÿÿ>Ñ  ÿÿºÑ  ÿÿ
-Ò  ÿÿ„Ò  ÿÿòÒ  ÿÿTÓ  ÿÿ¯Ó  ÿÿÔ  ÿÿ~Ô  ÿÿÙÔ  ÿÿ9Õ  ÿÿ 9Õ  ’Õ  ÿÿéÕ  ÿÿQÖ  ÿÿ¸Ö  ÿÿ+×  ÿÿ-×  ÿÿQ×  ÿÿY×  ÿÿÒØ  ÿÿ
-Ù  ÿÿGÙ  ÿÿ‚Ù  ÿÿ¼Ù  ÿÿêÙ  ÿÿğÙ  ÿÿòÙ  ÿÿ÷Ù  ÿÿ3Ú  ÿÿmÚ  ÿÿĞÚ  ÿÿ ĞÚ  Û  ÿÿDÛ  ÿÿJÛ  ÿÿLÛ  ÿÿ[Û  ÿÿ]Û  ÿÿgÛ  ÿÿ¯Û  ÿÿÿÛ  ÿÿ#Ü  ÿÿgÜ  ÿÿ›Ü  ÿÿêÜ  ÿÿõÜ  ÿÿ÷Ü  ÿÿİ  ÿÿHİ  ÿÿˆİ  ÿÿÕİ  ÿÿàİ  ÿÿ àİ  âİ  ÿÿèİ  ÿÿøİ  ÿÿúİ  ÿÿŞ  ÿÿŞ  ÿÿŞ  ÿÿŞ  ÿÿŞ  ÿÿ0Ş  ÿÿ5Ş  ÿÿqŞ  ÿÿ²Ş  ÿÿÖŞ  ÿÿØŞ  ÿÿß  ÿÿiß  ÿÿqß  ÿÿÎß  ÿÿ2à  ÿÿ 2à  4à  ÿÿ9à  ÿÿNà  ÿÿà  ÿÿÍà  ÿÿÏà  ÿÿÔà  ÿÿéà  ÿÿìá  ÿÿ:â  ÿÿ<><ë  ÿÿ¬ë  ÿÿì  ÿÿtì  ÿÿzì  ÿÿæì  ÿÿ;í  ÿÿ=í  ÿÿmí  ÿÿoí  ÿÿyí  ÿÿŠí  ÿÿ Ší  èí  ÿÿóí  ÿÿõí  ÿÿâí  ÿÿÿí  ÿÿqî  ÿÿ¦î  ÿÿ¨î  ÿÿïî  ÿÿñî  ÿÿï  ÿÿ5ï  ÿÿwï  ÿÿyï  ÿÿ›ï  ÿÿ½ï  ÿÿßï  ÿÿğ  ÿÿlğ  ÿÿnğ  ÿÿ nğ  ğ  ÿÿ²ğ  ÿÿôğ  ÿÿöğ  ÿÿñ  ÿÿ:ñ  ÿÿ\ñ  ÿÿ~ñ  ÿÿ ñ  ÿÿâñ  ÿÿäñ  ÿÿóñ  ÿÿõñ  ÿÿÿñ  ÿÿ,ò  ÿÿjò  ÿÿuò  ÿÿwò  ÿÿ›ò  ÿÿò  ÿÿ ò  ¢ò  ÿÿşò  ÿÿó  ÿÿsó  ÿÿµó  ÿÿâó  ÿÿèó  ÿÿêó  ÿÿùó  ÿÿûó  ÿÿô  ÿÿmô  ÿÿô  ÿÿáô  ÿÿõ  ÿÿ9õ  ÿÿˆõ  ÿÿ“õ  ÿÿ•õ  ÿÿŸõ  ÿÿ Ÿõ  æõ  ÿÿ&ö  ÿÿsö  ÿÿ~ö  ÿÿ€ö  ÿÿ†ö  ÿÿ–ö  ÿÿ˜ö  ÿÿ¡ö  ÿÿ¦ö  ÿÿ¯ö  ÿÿ´ö  ÿÿ½ö  ÿÿâö  ÿÿëö  ÿÿğö  ÿÿùö  ÿÿşö  ÿÿàö  ÿÿğö  ÿÿ ğö  òö  ÿÿ÷  ÿÿ0÷  ÿÿt÷  ÿÿx÷  ÿÿz÷  ÿÿ÷  ÿÿ»÷  ÿÿü÷  ÿÿaø  ÿÿ¤ø  ÿÿñø  ÿÿ×ø  ÿÿùø  ÿÿæø  ÿÿ7ù  ÿÿˆù  ÿÿ“ù  ÿÿ•ù  ÿÿğù  ÿÿ ğù  òù  ÿÿúù  ÿÿïù  ÿÿú  ÿÿ ú  ÿÿwú  ÿÿlú  ÿÿrú  ÿÿ£ú  ÿÿ¯ú  ÿÿòú  ÿÿìú  ÿÿ="" û  ÿÿû  ÿÿhû  ÿÿnû  ÿÿ–û  ÿÿœû  ÿÿû  ÿÿãû  ÿÿ ãû  çû  ÿÿü  ÿÿ="" ü  ÿÿü  ÿÿnü  ÿÿü  ÿÿôü  ÿÿ7ı  ÿÿdı  ÿÿjı  ÿÿlı  ÿÿqı  ÿÿ¨ı  ÿÿáı  ÿÿìı  ÿÿîı  ÿÿöı  ÿÿş  ÿÿ6ş  ÿÿtş  ÿÿ tş  rş  ÿÿ‰ş  ÿÿş  ÿÿ»ş  ÿÿáş  ÿÿìş  ÿÿış  ÿÿÿ  ÿÿÿ  ÿÿjÿ  ÿÿpÿ  ÿÿ“ÿ  ÿÿ™ÿ  ÿÿ›ÿ  ÿÿ»ÿ  ÿÿßÿ  ÿÿ  ÿÿ  ÿÿ=""   ÿÿf  ÿÿ f  ‡  ÿÿì  ÿÿ/ ÿÿ\ ÿÿb ÿÿd ÿÿ¯ ÿÿb ÿÿ* ÿÿ0 ÿÿ@ ÿÿb ÿÿx ÿÿ ÿÿ© ÿÿ« ÿÿñ ÿÿ[ ÿÿ] ÿÿ¾ ÿÿ ¾ : ÿÿ{ ÿÿı ÿÿ’ ÿÿf ÿÿ³ ÿÿn=""  ÿÿt=""  ÿÿ£=""  ÿÿö=""  ÿÿª=""  ÿÿ, ÿÿ. ÿÿ„ ÿÿî ÿÿ ÿÿw ÿÿy ÿÿ‚ ÿÿœ ÿÿ œ à ÿÿä ÿÿæ ÿÿë ÿÿ'=""  ÿÿh=""  ÿÿí=""  ÿÿ ÿÿ=" ÿÿC ÿÿE ÿÿJ ÿÿw ÿÿ ÿÿ ÿÿŸ ÿÿÛ ÿÿİ ÿÿ"> ÿÿ· ÿÿ · å ÿÿ" ÿÿo ÿÿ¤ ÿÿı ÿÿÿ ÿÿE ÿÿŸ ÿÿÍ ÿÿ- ÿÿ/ ÿÿj ÿÿİ ÿÿW ÿÿ¹ ÿÿ2 ÿÿ4 ÿÿ ÿÿÊ ÿÿ ÿÿ   ÿÿ/ ÿÿ ÿÿ ÿÿ ÿÿ ÿÿ& ÿÿ+ ÿÿ- ÿÿQ ÿÿu ÿÿw ÿÿ| ÿÿ¸ ÿÿù ÿÿ^ ÿÿ¡ ÿÿÎ ÿÿÔ ÿÿÖ ÿÿ Ö Û ÿÿ ÿÿ ÿÿ( ÿÿ* ÿÿL ÿÿn ÿÿ ÿÿ¬ ÿÿÒ ÿÿú ÿÿ ÿÿ& ÿÿ8 ÿÿZ ÿÿi ÿÿw ÿÿ ÿÿÃ ÿÿÑ ÿÿ Ñ  ÿÿ$ ÿÿ4 ÿÿQ ÿÿ… ÿÿ¢ ÿÿÌ ÿÿğ ÿÿ
- ÿÿF ÿÿy ÿÿ¯ ÿÿÒ ÿÿ ÿÿ& ÿÿR ÿÿx ÿÿš ÿÿÊ ÿÿò ÿÿ ò  ÿÿ* ÿÿ0 ÿÿ6 ÿÿ< ÿÿB ÿÿD ÿÿh ÿÿŒ ÿÿ ÿÿ“ ÿÿÏ ÿÿ ÿÿu ÿÿ¸ ÿÿå ÿÿë ÿÿí ÿÿò ÿÿE ÿÿ E § ÿÿ© ÿÿ³ ÿÿô ÿÿ/  ÿÿ:  ÿÿ<  ÿÿF  ÿÿv  ÿÿ²  ÿÿ½  ÿÿ¿  ÿÿø  ÿÿú  ÿÿ! ÿÿ! ÿÿ
-! ÿÿ.! ÿÿ0! ÿÿ?! ÿÿ ?! A! ÿÿK! ÿÿ“! ÿÿã! ÿÿ" ÿÿK" ÿÿ" ÿÿÎ" ÿÿÙ" ÿÿÛ" ÿÿå" ÿÿ,# ÿÿl# ÿÿ¹# ÿÿÄ# ÿÿÆ# ÿÿÏ# ÿÿÔ# ÿÿİ# ÿÿâ# ÿÿ â# $ ÿÿ
-$ ÿÿ$ ÿÿ%$ ÿÿy$ ÿÿÌ$ ÿÿŞ$ ÿÿé$ ÿÿë$ ÿÿõ$ ÿÿ% ÿÿ6% ÿÿ?% ÿÿ`% ÿÿx% ÿÿ% ÿÿ˜% ÿÿ£% ÿÿ¥% ÿÿ½% ÿÿ ½% ¿% ÿÿÎ% ÿÿİ% ÿÿì% ÿÿû% ÿÿı% ÿÿ1& ÿÿ3& ÿÿi& ÿÿ›& ÿÿ±& ÿÿú& ÿÿ' ÿÿ' ÿÿ' ÿÿL' ÿÿˆ' ÿÿ“' ÿÿİ' ÿÿø' ÿÿ ø' *( ÿÿ,( ÿÿ;( ÿÿ=( ÿÿa( ÿÿi( ÿÿk( ÿÿz( ÿÿƒ( ÿÿ‰( ÿÿ‹( ÿÿÊ( ÿÿ) ÿÿM) ÿÿ”) ÿÿ–) ÿÿ×) ÿÿ* ÿÿ\* ÿÿ£* ÿÿ £* ¥* ÿÿ­* ÿÿÑ* ÿÿÓ* ÿÿâ* ÿÿê* ÿÿì* ÿÿõ* ÿÿş* ÿÿ+ ÿÿ+ ÿÿÊ( ÿÿ) ÿÿM) ÿÿ”) ÿÿ–) ÿÿ×) ÿÿ* ÿÿ\* ÿÿ£* ÿÿ    Arial    ÿÿQÖ  ÿÿ¸Ö  ÿÿ+×  ÿÿ-×  ÿÿQ×  ÿÿY×  ÿÿÒØ  ÿÿ
-Ù  ÿÿGÙ  ÿÿ‚Ù  ÿÿ¼Ù  ÿÿêÙ  ÿÿğÙ  ÿÿòÙ  ÿÿ÷Ù  ÿÿ3Ú  ÿÿmÚ  ÿÿĞÚ  ÿÿ </ë  ÿÿ¬ë  ÿÿì  ÿÿtì  ÿÿzì  ÿÿæì  ÿÿ;í  ÿÿ=í  ÿÿmí  ÿÿoí  ÿÿyí  ÿÿŠí  ÿÿ Ší  èí  ÿÿóí  ÿÿõí  ÿÿâí  ÿÿÿí  ÿÿqî  ÿÿ¦î  ÿÿ¨î  ÿÿïî  ÿÿñî  ÿÿï  ÿÿ5ï  ÿÿwï  ÿÿyï  ÿÿ›ï  ÿÿ½ï  ÿÿßï  ÿÿğ  ÿÿlğ  ÿÿnğ  ÿÿ nğ  ğ  ÿÿ²ğ  ÿÿôğ  ÿÿöğ  ÿÿñ  ÿÿ:ñ  ÿÿ\ñ  ÿÿ~ñ  ÿÿ ñ  ÿÿâñ  ÿÿäñ  ÿÿóñ  ÿÿõñ  ÿÿÿñ  ÿÿ,ò  ÿÿjò  ÿÿuò  ÿÿwò  ÿÿ›ò  ÿÿò  ÿÿ ò  ¢ò  ÿÿşò  ÿÿó  ÿÿsó  ÿÿµó  ÿÿâó  ÿÿèó  ÿÿêó  ÿÿùó  ÿÿûó  ÿÿô  ÿÿmô  ÿÿô  ÿÿáô  ÿÿõ  ÿÿ9õ  ÿÿˆõ  ÿÿ“õ  ÿÿ•õ  ÿÿŸõ  ÿÿ Ÿõ  æõ  ÿÿ&ö  ÿÿsö  ÿÿ~ö  ÿÿ€ö  ÿÿ†ö  ÿÿ–ö  ÿÿ˜ö  ÿÿ¡ö  ÿÿ¦ö  ÿÿ¯ö  ÿÿ´ö  ÿÿ½ö  ÿÿâö  ÿÿëö  ÿÿğö  ÿÿùö  ÿÿşö  ÿÿàö  ÿÿğö  ÿÿ ğö  òö  ÿÿ÷  ÿÿ0÷  ÿÿt÷  ÿÿx÷  ÿÿz÷  ÿÿ÷  ÿÿ»÷  ÿÿü÷  ÿÿaø  ÿÿ¤ø  ÿÿñø  ÿÿ×ø  ÿÿùø  ÿÿæø  ÿÿ7ù  ÿÿˆù  ÿÿ“ù  ÿÿ•ù  ÿÿğù  ÿÿ ğù  òù  ÿÿúù  ÿÿïù  ÿÿú  ÿÿ></w  ÿÿ>
+</font></font></p></i></p>
+</body>
+</html>
