--- a/grondame.htm
+++ b/grondame.htm
@@ -142,5 +142,6 @@ document</i></a>]
 <p><br>
 
 <center><hr width="100%"></center>
-</p></a></p></body>
-</body></html>
+</p></a></p>
+</body>
+</html>
