--- a/hidco-01.htm
+++ b/hidco-01.htm
@@ -55,12 +55,4 @@
 <p><br></p>
 
 </body>
-</body></html>
-
-<center><hr width="100%"></center>
-
-<center€òwn^òdg0h0h~^meg0hž ç@#ÿpó’^› öŸ0ge“ðŸripöŒ2hª’gpº^÷jri4
-ïjri²inigpë^à	ïj4gpç^áçj,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ9ÿÿkÿÿ¥ÿÿàÿÿÿÿÿÿ$ÿÿ&ÿÿ/ÿÿ1ÿÿ9ÿÿÿÿƒÿÿ·ÿÿßÿÿßòÿÿÿÿ2ÿÿ4ÿÿxÿÿmÿÿÿÿ¥ÿÿªÿÿ¬ÿÿúÿÿúÿÿÿÿÿÿ8ÿÿ:ÿÿpÿÿÿÿnÿÿvÿÿvxÿÿ|ÿÿ~ÿÿˆÿÿ¶ÿÿòÿÿôÿÿöÿÿ ÿÿtÿÿ¡ÿÿïÿÿÿÿÿÿÿÿaÿÿ}ÿÿˆÿÿŠÿÿ®ÿÿ®°ÿÿ¾ÿÿàÿÿéÿÿòÿÿôÿÿôÿÿöÿÿ ÿÿtÿÿ¡ÿÿïÿÿÿÿÿÿÿÿaÿÿ}ÿÿˆÿÿŠÿÿ®ÿÿ arialdg”f”f&`meg”fž ç@/gpó:`› ^š´˜àš^š0gŽ“pöŒ2hb‘gpb`÷jših4
-ïjši¢ižhžigps`à	ïjìgp`áçj, ç@#ÿpó’^›="" öŸ0ge“ðŸripöŒ2hª’gpº^÷jri4="" ïjri²inigpë^à="" ïj4gpç^áçj,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ9ÿÿkÿÿ¥ÿÿàÿÿÿÿÿÿ$ÿÿ&ÿÿ/ÿÿ1ÿÿ9ÿÿÿÿƒÿÿ·ÿÿßÿÿßòÿÿÿÿ2ÿÿ4ÿÿxÿÿmÿÿÿÿ¥ÿÿªÿÿ¬ÿÿúÿÿúÿÿÿÿÿÿ8ÿÿ:ÿÿpÿÿÿÿnÿÿvÿÿvxÿÿ|ÿÿ~ÿÿˆÿÿ¶ÿÿòÿÿôÿÿöÿÿ="" ÿÿtÿÿ¡ÿÿïÿÿÿÿÿÿÿÿaÿÿ}ÿÿˆÿÿŠÿÿ®ÿÿ®°ÿÿ¾ÿÿàÿÿéÿÿòÿÿôÿÿôÿÿöÿÿ="" ÿÿtÿÿ¡ÿÿïÿÿÿÿÿÿÿÿaÿÿ}ÿÿˆÿÿŠÿÿ®ÿÿ="" arialdg”f”f&`meg”fž="" ç@/gpó:`›="" ^š´˜àš^š0gŽ“pöŒ2hb‘gpb`÷jših4="" ïjši¢ižhžigps`à=""></center€òwn^òdg0h0h~^meg0hž ç@#ÿpó’^› öŸ0ge“ðŸripöŒ2hª’gpº^÷jri4
-ïjri²inigpë^à	ïj4gpç^áçj,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ9ÿÿkÿÿ¥ÿÿàÿÿÿÿÿÿ$ÿÿ&ÿÿ/ÿÿ1ÿÿ9ÿÿÿÿƒÿÿ·ÿÿßÿÿßòÿÿÿÿ2ÿÿ4ÿÿxÿÿmÿÿÿÿ¥ÿÿªÿÿ¬ÿÿúÿÿúÿÿÿÿÿÿ8ÿÿ:ÿÿpÿÿÿÿnÿÿvÿÿvxÿÿ|ÿÿ~ÿÿˆÿÿ¶ÿÿòÿÿôÿÿöÿÿ ÿÿtÿÿ¡ÿÿïÿÿÿÿÿÿÿÿaÿÿ}ÿÿˆÿÿŠÿÿ®ÿÿ®°ÿÿ¾ÿÿàÿÿéÿÿòÿÿôÿÿôÿÿöÿÿ ÿÿtÿÿ¡ÿÿïÿÿÿÿÿÿÿÿaÿÿ}ÿÿˆÿÿŠÿÿ®ÿÿ arialdg”f”f&`meg”fž ç@/gpó:`› ^š´˜àš^š0gŽ“pöŒ2hb‘gpb`÷jših4
-ïjši¢ižhžigps`à	ïjìgp`áçj,>
+</html>
