--- a/htm-help.htm
+++ b/htm-help.htm
@@ -33,26 +33,26 @@
 <br><a href="htm-help.htm#htmlinfo">Gen. info.</a><br>
 <br><a href="htm-help.htm#norskbokstaver">Norsk bokstaver - - Norw. characters</a><br>
 <br><a href="htm-help.htm#div-idear">div-idear</a><br>
-<br><a href="htm-help.htm#soek">Søk - - - Search</a><br>
+<br><a href="htm-help.htm#soek">Sï¿½k - - - Search</a><br>
 <br><a href="htm-help.htm#samtale">Samtale - - - Communicate</a><br>
 
-<p><b>Bruk FØRRE knappen din,.. eller:</b>
+<p><b>Bruk Fï¿½RRE knappen din,.. eller:</b>
 <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<i>Use your BACK button... or:</i>
 <font face="MS Sans Serif" size="2">
 
 <p>&nbsp; &nbsp; [ <b><a href="index-1.htm#topp"> HOVUDSIDE, innhold... </a></b>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
 [ <a href="index-1.htm#topp"><i> MAIN PAGE, index.. </i></a>]
 
-<p>&nbsp; &nbsp; [ <a href="medlem01.htm#topp"><b> GRENDELAG, "e"-samtale, fødselsdager.. </b></a>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
+<p>&nbsp; &nbsp; [ <a href="medlem01.htm#topp"><b> GRENDELAG, "e"-samtale, fï¿½dselsdager.. </b></a>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
 [ <a href="medlem01.htm#topp"><i> GRANGE, chatroom, birthdays.. </i></a>]
 
-<p>&nbsp; &nbsp; [ <a href="naering1.htm#topp"><b> LENKJER: Næring, soga, slekt, m.a. </b></a>] &nbsp; -&nbsp;- &nbsp;
+<p>&nbsp; &nbsp; [ <a href="naering1.htm#topp"><b> LENKJER: Nï¿½ring, soga, slekt, m.a. </b></a>] &nbsp; -&nbsp;- &nbsp;
 [ <a href="naering1.htm#topp"><i> LINKS: Business, history, genealogy, etc.</i></a> ]
 
 <p>&nbsp; &nbsp; [ <a href="forslag1.htm#topp"><b> FORSLAG, helsing, diskusjon.. </b></a>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
 [ <a href="forslag1.htm#topp"><i> SUGGESTIONS, greetings, discussions..</i></a> ]
 
-<p>&nbsp; &nbsp; [ <a href="soge-001.htm#topp"><b> SOGE, slektslære.. </b></a>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
+<p>&nbsp; &nbsp; [ <a href="soge-001.htm#topp"><b> SOGE, slektslï¿½re.. </b></a>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
 [ <a href="soge-001.htm#topp"><i> HISTORY, genealogy..</i></a> ]
 
 <p>&nbsp; &nbsp; [ <a href="nytt-001.htm#topp"><b> NYTT.. </b></a>] &nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp;
@@ -70,7 +70,7 @@
 <center>
 <font face="MS Sans Serif" size="3">
 <a href="nytt-001.htm#topp"><b> NYTT </b></a>&nbsp;- -&nbsp;
-<a href="naering1.htm#topp"><b> NÆRING </b></a>&nbsp;- -&nbsp;
+<a href="naering1.htm#topp"><b> Nï¿½RING </b></a>&nbsp;- -&nbsp;
 <a href="soge-001.htm#topp"><b> SOGE </b></a>&nbsp;- -&nbsp;
 <a href="medlem01.htm#topp"><b> GRENDELAG </b></a>&nbsp;- -&nbsp;
 <a href="forslag1.htm#topp"><b> FRAMLEGG </b></a>
@@ -189,7 +189,7 @@
 <center><hr width="100%"></center>
 <p><br></p>
 
-<p><b>Treng du å ta kontakt med nokon...?</b>
+<p><b>Treng du ï¿½ ta kontakt med nokon...?</b>
 <br>&nbsp; &nbsp; -&nbsp;- &nbsp; &nbsp; <i>Do you need to contact anyone...?</i>
 
 <br>
@@ -198,7 +198,7 @@
 <font color="#ff0000" size="3" ptsize="10">
 
 <center>~~~~~~~~~~~~
-<br><b>Bruk "<a href="forslag1.htm#forslag">gjesteboken</a>" å kontakte
+<br><b>Bruk "<a href="forslag1.htm#forslag">gjesteboken</a>" ï¿½ kontakte
 vevmeisteren.</b>
 <br><i>[Use the "<a href="forslag1.htm#forslag">guestbook</a>" to contact the
 webmaster.]</i>
@@ -247,24 +247,24 @@ _______ @post.com </font></font></center>
 
 <a name="norskbokstaver"></a>
 <center><hr width="100%"></center>
-<br><b>Korleis ein får til norsk bokstaver..</b><br>
-<br><i>How to create Norw. characters: Æ, æ, Ø, ø, Å, å</i><br>
+<br><b>Korleis ein fï¿½r til norsk bokstaver..</b><br>
+<br><i>How to create Norw. characters: ï¿½, ï¿½, ï¿½, ï¿½, ï¿½, ï¿½</i><br>
 <br><a href="http://www.nndata.no/home/jborgos/alfabet.htm">http://www.nndata.no/home/jborgos/alfabet.htm</a><br>
 
 <center><hr width="100%"></center>
 
 <p><br><b>Norsk</b><i> - - Norse</i> ...
-<br><b>Dataspråk kode</b><i> HTML code</i> ... <br>
+<br><b>Datasprï¿½k kode</b><i> HTML code</i> ... <br>
 <br><b>H&oslash;gre mus-klikk</b><i> Right mouse-clikk</i> ...  <b>(Vis kjelde</b><i> - - View source)</i><br>
 
 <br>
 
-<br><b>Æ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;AElig;</b><br>
-<br><b>æ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aelig;</b><br>
-<br><b>Ø &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Oslash;</b><br>
-<br><b>ø &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;oslash;</b><br>
-<br><b>Å &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Aring;</b><br>
-<br><b>å &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aring;</b><br>
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;AElig;</b><br>
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aelig;</b><br>
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Oslash;</b><br>
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;oslash;</b><br>
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Aring;</b><br>
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aring;</b><br>
 <br>
 <br><b>Islandsk</b><i> - - Icelandic</i> ...
 <br><b>&ETH; &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;ETH;</b><br>
@@ -291,18 +291,18 @@ _______ @post.com </font></font></center>
 <p>
 <br>
 
-<br><b>Æ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;AElig;</b> becomes/ vert&nbsp; &nbsp;  - &AElig; ...(alternatively, one can use <b>&amp;#0198</b> to get &#0198.)
-<br><b>æ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aelig;</b> becomes/ vert&nbsp; &nbsp;  - &aelig; ...(alternatively, one can use <b>&amp;#0230</b> to get &#0230.)
-<br><b>Ø &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Oslash;</b> becomes/ vert&nbsp; &nbsp;  - &Oslash; ...(alternatively, one can use <b>&amp;#0216</b> to get &#0216.)
-<br><b>ø &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;oslash;</b> becomes/ vert&nbsp; &nbsp;  - &oslash; ...(alternatively, one can use <b>&amp;#0248</b> to get &#0248.)
-<br><b>Å &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Aring</b> becomes/ vert&nbsp; &nbsp;  - &Aring ...(alternatively, one can use <b>&amp;#0197</b> to get &#0197.)
-<br><b>å &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aring;</b> becomes/ vert&nbsp; &nbsp;  - &aring; ...(alternatively, one can use <b>&amp;#0229</b> to get &#0229.)
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;AElig;</b> becomes/ vert&nbsp; &nbsp;  - &AElig; ...(alternatively, one can use <b>&amp;#0198</b> to get &#0198.)
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aelig;</b> becomes/ vert&nbsp; &nbsp;  - &aelig; ...(alternatively, one can use <b>&amp;#0230</b> to get &#0230.)
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Oslash;</b> becomes/ vert&nbsp; &nbsp;  - &Oslash; ...(alternatively, one can use <b>&amp;#0216</b> to get &#0216.)
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;oslash;</b> becomes/ vert&nbsp; &nbsp;  - &oslash; ...(alternatively, one can use <b>&amp;#0248</b> to get &#0248.)
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;Aring</b> becomes/ vert&nbsp; &nbsp;  - &Aring ...(alternatively, one can use <b>&amp;#0197</b> to get &#0197.)
+<br><b>ï¿½ &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;aring;</b> becomes/ vert&nbsp; &nbsp;  - &aring; ...(alternatively, one can use <b>&amp;#0229</b> to get &#0229.)
 <br>
 <br><b>& &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;amp;</b> becomes/ vert&nbsp; &nbsp;  - &amp; ...(alternatively, one can use <b>&amp;#38</b> to get &#38 ampersand sign.)
 <br><b>" &nbsp; &nbsp;  -&nbsp; &nbsp; &amp;quot;</b> becomes/ vert&nbsp; &nbsp;  - &quot; ...(alternatively, one can use <b>&amp;#34</b> to get &#34 quotation mark.)
 
-<p>Døme/ Example:
-<br><b>"Været kan sjå ut ...som snø & regn."</b>
+<p>Dï¿½me/ Example:
+<br><b>"Vï¿½ret kan sjï¿½ ut ...som snï¿½ & regn."</b>
 <br>&quot;V&aelig;ret kan sj&aring; ut ...som sn&oslash; &amp; regn.&quot;
 
 <center><hr width="100%"></center>
@@ -377,7 +377,7 @@ _______ @post.com </font></font></center>
                 <option value="medlem01.htm#topp"><b>GRENDELAG</b> - <i>Grange</i></option>
                 <option value="forslag1.htm#gjestebok"><b>INNLEGG</b> - <i>Suggestions</i></option>
                 <option value="forslag1.htm#gjestebok"><b>GJESTEBOK</b> - <i>Guest book</i></option>
-                <option value="naering1.htm#topp"><b>NÆRING</b> - <i>Business</i></option>
+                <option value="naering1.htm#topp"><b>Nï¿½RING</b> - <i>Business</i></option>
                 <option value="soge-001.htm#topp"><b>SOGE</b> - <i>History</i></option>
                 <option value="forslag1.htm#forslag">VEVMEISTER - Webmaster</option>
               </select><input type="button" onclick="location = '' + document.navform.inchoice.options[
@@ -429,7 +429,7 @@ document.navform.inchoice.selectedIndex ].value;" value="TIL - To"></p>
 <b>INNLEGG</b><br><i>Input</i></a></td>
 
     <td valign="top" span="" class="s1" body="" bgcolor="#FF00FF" text="#FF0000" link="#0000EE" vlink="#551A8B"><a href="naering1.htm#topp">
-<b>NÆRING</b><br><i>Business</i></a></td>
+<b>Nï¿½RING</b><br><i>Business</i></a></td>
 
     <td valign="top" span="" class="s2" body="" bgcolor="#FFFF00" text="#FF0000" link="#0000EE" vlink="#551A8B"><a href="forslag1.htm#guestbook">
 <b>VEVMEISTER</b><br><i>Webmaster</i>
@@ -455,7 +455,7 @@ document.navform.inchoice.selectedIndex ].value;" value="TIL - To"></p>
   <tr>
     <td valign="top" span="" class="s1"><a href="#savewindow"><b>Lagre vindusoppsett
 </b></a></td>
-    <td valign="top" span="" class="s2">Lagre vindusstørrelse, plassering, innhold og hjemmeside for
+    <td valign="top" span="" class="s2">Lagre vindusstï¿½rrelse, plassering, innhold og hjemmeside for
 alle vinduer.
 </td>
   </tr>
@@ -742,13 +742,6 @@ BEGINNER'S GUIDE TO HTML</a>
 
 <center><hr width="97%"></center>
 
-</center></center></body>
-</body></html>
-<!-- /\ end html  -->
-d" - <a href="http://www.freefind.com">freefind.com</a> Free, up to 32 Mb (Banner ad)<br>
-<b€gw.wi'`7epu&`megpuì ï'uó:`›="" æàæ0g‚“pöŒ2h‚”wib`ßiâhì4="" ×iâh²iæhwis`à="" ×iwi`áïi,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ9ÿÿkÿÿ¤ÿÿßÿÿÿÿ="" ÿÿ4ÿÿ6ÿÿ?ÿÿaÿÿiÿÿ‘ÿÿ“ÿÿçÿÿïÿÿïÿÿÿÿbÿÿdÿÿhÿÿ}ÿÿ‘ÿÿµÿÿºÿÿ¼ÿÿêÿÿÿÿ-ÿÿ/ÿÿhÿÿáÿÿúÿÿ5ÿÿ|ÿÿ~ÿÿ~ªÿÿôÿÿÿÿÿÿ’ÿÿïÿÿñÿÿ[ÿÿ¦ÿÿ¨ÿÿ="" ÿÿwÿÿyÿÿúÿÿm="" ÿÿo="" ÿÿå="" ÿÿ="" ÿÿ="" ÿÿs="" ÿÿs="" §="" ÿÿ©="" ÿÿ·="" ÿÿ¹="" ÿÿğ="" ÿÿò="" ÿÿü="" ÿÿ="" ÿÿ&ÿÿ,ÿÿ.ÿÿ8ÿÿ^ÿÿœÿÿüÿÿÿÿ]ÿÿÿÿ™ÿÿ¤ÿÿ¤¦ÿÿ°ÿÿüÿÿçÿÿéÿÿóÿÿ="" ÿÿ9="" ÿÿ]="" ÿÿ€="" ÿÿ¢="" ÿÿ·="" ÿÿà="" ÿÿë="" ÿÿí="" ÿÿô="" ÿÿû="" ÿÿå="" ÿÿç="" ÿÿö="" ÿÿö="" ø="" ÿÿı="" ÿÿ0ÿÿgÿÿˆÿÿ·ÿÿ¹ÿÿ¿ÿÿïÿÿı ÿÿñ  ÿÿ=""   ÿÿ  ÿÿ  ÿÿ  ÿÿ="  ÿÿW  ÿÿ€  ÿÿ¨  ÿÿ¯  ÿÿ ¯  Ç  ÿÿ"   ÿÿ$  ÿÿm  ÿÿv  ÿÿ}  ÿÿ•  ÿÿù  ÿÿô  ÿÿ  ÿÿ?  ÿÿj  ÿÿq  ÿÿ‰  ÿÿô  ÿÿî  ÿÿ  ÿÿ?  ÿÿh  ÿÿo  ÿÿ o  u  ÿÿá  ÿÿã  ÿÿ  ÿÿ7  ÿÿ="">  ÿÿD  ÿÿŒ  ÿÿ›  ÿÿÇ  ÿÿê  ÿÿñ  ÿÿ÷  ÿÿD  ÿÿS  ÿÿ  ÿÿ¤  ÿÿ«  ÿÿ±  ÿÿÿ  ÿÿ ÿ    ÿÿ:  ÿÿ_  ÿÿj  ÿÿ°  ÿÿ¿  ÿÿë  ÿÿ  ÿÿ  ÿÿ  ÿÿd  ÿÿt  ÿÿ›  ÿÿÃ  ÿÿÊ  ÿÿĞ  ÿÿ  ÿÿ1  ÿÿX  ÿÿƒ  ÿÿ ƒ  Š  ÿÿ¢  ÿÿë  ÿÿ  ÿÿ7  ÿÿ^  ÿÿl  ÿÿt  ÿÿv  ÿÿx  ÿÿ‡  ÿÿ«  ÿÿº  ÿÿ¼  ÿÿë  ÿÿ>  ÿÿ@  ÿÿH  ÿÿJ  ÿÿa  ÿÿ a  ‹  ÿÿ  ÿÿ£  ÿÿì  ÿÿÿ  ÿÿN  ÿÿ_  ÿÿz  ÿÿ|  ÿÿ  ÿÿ‹  ÿÿÎ  ÿÿĞ  ÿÿî  ÿÿğ  ÿÿ	  ÿÿ  ÿÿ3  ÿÿ5  ÿÿL  ÿÿ L  N  ÿÿS  ÿÿU  ÿÿm  ÿÿo  ÿÿy  ÿÿÓ  ÿÿ   ÿÿx  ÿÿ€  ÿÿ‰  ÿÿ‹  ÿÿ  ÿÿ±  ÿÿ³  ÿÿÁ  ÿÿÏ  ÿÿİ  ÿÿß  ÿÿü  ÿÿ ü    ÿÿ  ÿÿB  ÿÿU  ÿÿh  ÿÿ{  ÿÿ¸  ÿÿº  ÿÿŞ  ÿÿà  ÿÿî  ÿÿü  ÿÿ
-  ÿÿ  ÿÿ+  ÿÿO  ÿÿ†  ÿÿÈ  ÿÿ=  ÿÿ?  ÿÿ ?  c  ÿÿe  ÿÿ  ÿÿÆ  ÿÿ7   ÿÿ9   ÿÿ@   ÿÿB   ÿÿ   ÿÿ¼   ÿÿú   ÿÿ8!  ÿÿu!  ÿÿ²!  ÿÿº!  ÿÿé!  ÿÿ("  ÿÿk"  ÿÿs"  ÿÿ"  ÿÿ "  á"  ÿÿ$#  ÿÿ,#  ÿÿX#  ÿÿ“#  ÿÿÏ#  ÿÿ$  ÿÿO$  ÿÿ$  ÿÿÑ$  ÿÿ%  ÿÿS%  ÿÿ”%  ÿÿÙ%  ÿÿ&  ÿÿ_&  ÿÿa&  ÿÿf&  ÿÿm&  ÿÿo&  ÿÿ o&  '  ÿÿ­'  ÿÿN(  ÿÿï(  ÿÿŒ)  ÿÿ+*  ÿÿ2*  ÿÿØ*  ÿÿ€+  ÿÿ‚+  ÿÿ•+  ÿÿÇ+  ÿÿ,  ÿÿ,  ÿÿ9,  ÿÿ;,  ÿÿ>,  ÿÿI,  ÿÿK,  ÿÿo,  ÿÿ o,  q,  ÿÿ{,  ÿÿ•,  ÿÿ—,  ÿÿÆ,  ÿÿÈ,  ÿÿÒ,  ÿÿë,  ÿÿö,  ÿÿ-  ÿÿ-  ÿÿ-  ÿÿ,-  ÿÿ@-  ÿÿG-  ÿÿa-  ÿÿl-  ÿÿƒ-  ÿÿ…-  ÿÿ©-  ÿÿ ©-  «-  ÿÿ®-  ÿÿ¹-  ÿÿ»-  ÿÿŞ-  ÿÿ8.  ÿÿo.  ÿÿu.  ÿÿ{.  ÿÿ£.  ÿÿ½.  ÿÿÈ.  ÿÿŞ.  ÿÿû.  ÿÿ/  ÿÿ	/  ÿÿ/  ÿÿr/  ÿÿt/  ÿÿ—/  ÿÿ —/  ™/  ÿÿ¯/  ÿÿÿ/  ÿÿ§0  ÿÿ¯0  ÿÿ±0  ÿÿÕ0  ÿÿ×0  ÿÿá0  ÿÿ1  ÿÿB1  ÿÿD1  ÿÿs1  ÿÿ¥1  ÿÿ§1  ÿÿÖ1  ÿÿ2  ÿÿ2  ÿÿ2  ÿÿ/2  ÿÿ /2  S2  ÿÿU2  ÿÿc2  ÿÿe2  ÿÿq2  ÿÿÔ2  ÿÿë2  ÿÿû2  ÿÿU3  ÿÿe3  ÿÿª3  ÿÿæ3  ÿÿC4  ÿÿ 4  ÿÿ5  ÿÿk5  ÿÿÇ5  ÿÿ 6  ÿÿv6  ÿÿ£6  ÿÿ £6  î6  ÿÿ!7  ÿÿF7  ÿÿ\7  ÿÿq7  ÿÿ„7  ÿÿ•7  ÿÿ—7  ÿÿ¥7  ÿÿµ7  ÿÿÆ7  ÿÿØ7  ÿÿï7  ÿÿ8  ÿÿ8  ÿÿ28  ÿÿ48  ÿÿB8  ÿÿD8  ÿÿh8  ÿÿ h8  j8  ÿÿ8  ÿÿƒ8  ÿÿ‘8  ÿÿŸ8  ÿÿ­8  ÿÿ¯8  ÿÿÓ8  ÿÿÕ8  ÿÿ×8  ÿÿå8  ÿÿõ8  ÿÿ9  ÿÿ9  ÿÿ/9  ÿÿL9  ÿÿN9  ÿÿr9  ÿÿt9  ÿÿ|9  ÿÿ |9  ı9  ÿÿ,:  ÿÿ.:  ÿÿ²:  ÿÿã:  ÿÿå:  ÿÿi;  ÿÿ—;  ÿÿ™;  ÿÿ<  ÿÿM<  ÿÿO<  ÿÿØ<  ÿÿÿ<  ÿÿ=  ÿÿ=  ÿÿ=  ÿÿ&=  ÿÿ(=  ÿÿ6=  ÿÿ 6=  D=  ÿÿR=  ÿÿ`=  ÿÿn=  ÿÿ|=  ÿÿ~=  ÿÿ¢=  ÿÿ°=  ÿÿ¾=  ÿÿâ=  ÿÿä=  ÿÿò=  ÿÿô=  ÿÿü=  ÿÿK>  ÿÿZ>  ÿÿ¹>  ÿÿÈ>  ÿÿÏ>  ÿÿØ>  ÿÿ Ø>  à>  ÿÿ7?  ÿÿ@?  ÿÿO?  ÿÿ”?  ÿÿ›?  ÿÿ¤?  ÿÿ¬?  ÿÿ@  ÿÿ@  ÿÿs@  ÿÿz@  ÿÿƒ@  ÿÿ@  ÿÿ@  ÿÿ@  ÿÿŸ@  ÿÿá@  ÿÿã@  ÿÿñ@  ÿÿ ñ@  ÿ@  ÿÿ
-A  ÿÿA  ÿÿ3A  ÿÿ5A  ÿÿCA  ÿÿ~A  ÿÿÄA  ÿÿÿA  ÿÿB  ÿÿB  ÿÿB  ÿÿ,B  ÿÿ.B  ÿÿVB  ÿÿ†B  ÿÿËB  ÿÿÍB  ÿÿñB  ÿÿóB  ÿÿ óB  C  ÿÿC  ÿÿGC  ÿÿIC  ÿÿyC  ÿÿ»C  ÿÿ½C  ÿÿáC  ÿÿãC  ÿÿñC  ÿÿÿC  ÿÿ
-D  ÿÿD  ÿÿ)D  ÿÿ7D  ÿÿED  ÿÿSD  ÿÿaD  ÿÿoD  ÿÿqD  ÿÿ qD  D  ÿÿƒD  ÿÿœD  ÿÿÀD  ÿÿÂD  ÿÿE  ÿÿ3E  ÿÿE  ÿÿŸE  ÿÿªE  ÿÿ¬E  ÿÿĞE  ÿÿÒE  ÿÿõE  ÿÿ/F  ÿÿ:F  ÿÿ<f  ÿÿ`f  ÿÿbf  ÿÿ£f  ÿÿ £f  ñf  ÿÿüf  ÿÿşf  ÿÿ"g  ÿÿ$g  ÿÿtg  ÿÿçg  ÿÿòg  ÿÿôg  ÿÿøg  ÿÿúg  ÿÿfh  ÿÿ‹h  ÿÿ–h  ÿÿ˜h  ÿÿ¼h  ÿÿ¾h  ÿÿ*i  ÿÿi  ÿÿi  ÿÿ i   i  ÿÿäi  ÿÿæi  ÿÿÿi  ÿÿjj  ÿÿuj  ÿÿwj  ÿÿ{j  ÿÿ}j  ÿÿğj  ÿÿk  ÿÿ k  ÿÿ"k  ÿÿfk  ÿÿhk  ÿÿ™k  ÿÿæk  ÿÿñk  ÿÿók  ÿÿl  ÿÿ l  l  ÿÿ`l  ÿÿçl  ÿÿòl  ÿÿôl  ÿÿøl  ÿÿúl  ÿÿ3m  ÿÿ’m  ÿÿm  ÿÿŸm  ÿÿãm  ÿÿåm  ÿÿn  ÿÿkn  ÿÿvn  ÿÿxn  ÿÿn  ÿÿ±n  ÿÿ³n  ÿÿ ³n  én  ÿÿón  ÿÿgo  ÿÿo  ÿÿp  ÿÿƒp  ÿÿêp  ÿÿrq  ÿÿğq  ÿÿdr  ÿÿfr  ÿÿ²r  ÿÿ´r  ÿÿ7s  ÿÿ9s  ÿÿ³s  ÿÿµs  ÿÿ)t  ÿÿ+t  ÿÿát  ÿÿ át  ãt  ÿÿît  ÿÿğt  ÿÿu  ÿÿu  ÿÿ_u  ÿÿ u  ÿÿ«u  ÿÿ­u  ÿÿñu  ÿÿóu  ÿÿv  ÿÿv  ÿÿv  ÿÿşv  ÿÿyw  ÿÿx  ÿÿ‹x  ÿÿy  ÿÿ="" y  ÿÿ ="" y  y  ÿÿy  ÿÿ,y  ÿÿpy  ÿÿry  ÿÿzy  ÿÿ‚y  ÿÿ„y  ÿÿöy  ÿÿz  ÿÿ&z  ÿÿ(z  ÿÿlz  ÿÿnz  ÿÿ©z  ÿÿçz  ÿÿòz  ÿÿôz  ÿÿ[  ÿÿ[  ÿÿ [  x[  ÿÿë[  ÿÿö[  ÿÿø[  ÿÿü[  ÿÿş[  ÿÿi\  ÿÿ\  ÿÿ›\  ÿÿ\  ÿÿá\  ÿÿã\  ÿÿ]  ÿÿa]  ÿÿl]  ÿÿn]  ÿÿ’]  ÿÿ”]  ÿÿ¶]  ÿÿ="" ^  ÿÿ ="" ^  ^  ÿÿ^  ÿÿ="">^  ÿÿq^  ÿÿ{^  ÿÿí^  ÿÿQ_  ÿÿ¸_  ÿÿº_  ÿÿŞ_  ÿÿì_  ÿÿî_  ÿÿø_  ÿÿR`  ÿÿŸ`  ÿÿ÷`  ÿÿÿ`  ÿÿa  ÿÿ
-a  ÿÿa  ÿÿ a  0a  ÿÿ2a  ÿÿKa  ÿÿMa  ÿÿ[a  ÿÿia  ÿÿka  ÿÿa  ÿÿ™a  ÿÿía  ÿÿøa  ÿÿb  ÿÿ%b  ÿÿ'b  ÿÿ5b  ÿÿCb  ÿÿQb  ÿÿSb  ÿÿwb  ÿÿyb  ÿÿ yb  ‡b  ÿÿ‰b  ÿÿÊb  ÿÿ	c  ÿÿFc  ÿÿ„c  ÿÿ†c  ÿÿÉc  ÿÿd  ÿÿOd  ÿÿd  ÿÿÌd  ÿÿ
-e  ÿÿe  ÿÿe  ÿÿ2e  ÿÿ4e  ÿÿ6e  ÿÿDe  ÿÿFe  ÿÿ Fe  Pe  ÿÿ—e  ÿÿÑe  ÿÿée  ÿÿúe  ÿÿ>f  ÿÿrf  ÿÿ¬f  ÿÿÃf  ÿÿÎf  ÿÿĞf  ÿÿóf  ÿÿõf  ÿÿşf  ÿÿg  ÿÿg  ÿÿ g  ÿÿ6e  ÿÿDe  ÿÿFe  ÿÿ    Arial    ÿÿ$  ÿÿM  ÿÿv  ÿÿ}  ÿÿ•  ÿÿÙ  ÿÿô  ÿÿ  ÿÿ?  ÿÿj  ÿÿq  ÿÿ‰  ÿÿÔ  ÿÿî  ÿÿ  ÿÿ?  ÿÿh  ÿÿo  ÿÿ </f  ÿÿ`f  ÿÿbf  ÿÿ£f  ÿÿ £f  ñf  ÿÿüf  ÿÿşf  ÿÿ"g  ÿÿ$g  ÿÿtg  ÿÿçg  ÿÿòg  ÿÿôg  ÿÿøg  ÿÿúg  ÿÿfh  ÿÿ‹h  ÿÿ–h  ÿÿ˜h  ÿÿ¼h  ÿÿ¾h  ÿÿ*i  ÿÿi  ÿÿi  ÿÿ i   i  ÿÿäi  ÿÿæi  ÿÿÿi  ÿÿjj  ÿÿuj  ÿÿwj  ÿÿ{j  ÿÿ}j  ÿÿğj  ÿÿk  ÿÿ></b€   g  w .wi'`7epu&`megpuì>
+</center></center>
+</body>
+</html>
