--- a/isaac-e1.htm
+++ b/isaac-e1.htm
@@ -41,7 +41,7 @@
 
 <font color="#000000">
 
-<p> <b>I året <a href="orsaka-1.htm">1866</a> reiste Isaac Erickson frå heimstadet <a href="orsaka-1.htm">Troms</a> i Noreg bort til sambandstatene. Ein måtte rekne med 13 vekers reisetid frå Troms til <a href="orsaka-1.htm">Quebec</a> i Kanada på den tidens vanlege seilskute.</b>
+<p> <b>I ï¿½ret <a href="orsaka-1.htm">1866</a> reiste Isaac Erickson frï¿½ heimstadet <a href="orsaka-1.htm">Troms</a> i Noreg bort til sambandstatene. Ein mï¿½tte rekne med 13 vekers reisetid frï¿½ Troms til <a href="orsaka-1.htm">Quebec</a> i Kanada pï¿½ den tidens vanlege seilskute.</b>
 <br> - - - - -
 <br> - - - - -
 <br> - - - - -
@@ -123,9 +123,4 @@ document</i></a>]
 <p><br>
 
 </p></body>
-</body></html>
-
-<!-- /\ end html  -->
-0%">
-<a name="topp"></a>
-<center> .  Troms, Norway home and journeyed to the United States. This voyage required thirteen wee</center>
+</html>
