--- a/foto-001.htm
+++ b/foto-001.htm
@@ -9,11 +9,11 @@ data below. Meta tags help search engines identify the content of your page.  --
    <meta name="keywords" content="Trandal, Trandal krins, Trandal grendelag, Trandal
 grange, Trandal bygda, Trandahl, Tranndal, Trandall, Tranndall, Trandale, Trandohl, Trandoll,
 Trondal, Tanndall, Tanndal, Tanndale, Drandal, Drandall, Drandale, Trandalhatten,
-Trandalshatten, Trandal's hat, Trandaldalen, Trandal setrevegen, Trandal sætra, Trandal seter,
+Trandalshatten, Trandal's hat, Trandaldalen, Trandal setrevegen, Trandal sï¿½tra, Trandal seter,
 Trandalsangen, Trandalsongen, Trandals song, Songen om Trandal, Song of Trandal, Ytre
-Trandal, Indre Trandal, Inngarden, Bakkene, Rønning, Ronning, Roenning, Rynningen, Nes,
-Naes, Næs, Storeide, Fylling, Hauge, Måseidvåg, Maaseidvaag, Naustenget, Brekke, Christian
-Gaard, Trandal Fjordhytter, Hjørundfjord, Hjorundfjord, Hjoerundfjord, Jorringfjord, Fjordenes
+Trandal, Indre Trandal, Inngarden, Bakkene, Rï¿½nning, Ronning, Roenning, Rynningen, Nes,
+Naes, Nï¿½s, Storeide, Fylling, Hauge, Mï¿½seidvï¿½g, Maaseidvaag, Naustenget, Brekke, Christian
+Gaard, Trandal Fjordhytter, Hjï¿½rundfjord, Hjorundfjord, Hjoerundfjord, Jorringfjord, Fjordenes
 perle, Pearl of the fjords, Fiords, Noreg, Norge, Norway">
    <meta name="description" content="Trandal - - Trandahl - - Trandall i Noreg, in Norway,
 Norge">
@@ -45,7 +45,7 @@ END writing your hidden comments here
 ========================
 COMMENTS -->
 
-<img src="_1_.jpg" alt="FOTO nr. __. av ___, om ___, dato ___, er 125 pixel (bilete-einingar) høg og 175 pixel breid." hspace="5" vspace="5" border="2" height="125" width="175" align="left">
+<img src="_1_.jpg" alt="FOTO nr. __. av ___, om ___, dato ___, er 125 pixel (bilete-einingar) hï¿½g og 175 pixel breid." hspace="5" vspace="5" border="2" height="125" width="175" align="left">
 
 <img src="_1_.jpg" alt="PHOTO No.__. of ___, about ___, date ___, is 125 pixels (picture-elements) high and 175 pixels wide." hspace="5" vspace="5" border="2" height="125" width="175" align="right">
 
@@ -69,7 +69,7 @@ COMMENTS -->
 <br><b>Hei!.. &nbsp; &nbsp; Send inn foto som eit e-post vedlegg. &nbsp; (Maks. 1.34 Mb fil.)</b><br>
 <br>&nbsp; &nbsp; <i>Hello!... &nbsp; &nbsp; Send in photographs as an e-mail attachment. &nbsp; (Max. 1.34 Mb file.)</i><br>
 <br>
-<br><b>FOTO: Om du ser feil vedk. namn, dato, stad, riktig vevside plassering, emne, eller <u>kva som helst</u> ver snild å skriv til vevmeisteren. (&quot;<a href="forslag1.htm#forslag">Gjestebok</a>&quot;)</b><br>
+<br><b>FOTO: Om du ser feil vedk. namn, dato, stad, riktig vevside plassering, emne, eller <u>kva som helst</u> ver snild ï¿½ skriv til vevmeisteren. (&quot;<a href="forslag1.htm#forslag">Gjestebok</a>&quot;)</b><br>
 <br>&nbsp; &nbsp; <i>PHOTOS: If you see mistakes re. name, date, location, correct webpage placement, subject, or <u>anything else</u>, please write to the webmaster. (&quot;<u>Guestbook</u>&quot;)</i><br>
 
 <br>
@@ -106,7 +106,7 @@ be reduced in Kb-size (&amp; original quality) downwards to standard Internet-sc
 <center>
 <table border="2" cols="1" width="40%" height="60" bgcolor="#87cefa">
 <tr><td>
-<center><b>Bruk FØRRE knappen din...</b><br>
+<center><b>Bruk Fï¿½RRE knappen din...</b><br>
 <br><i>Use your BACK button..</i><br></center>
 </td></tr>
 </table>
@@ -133,19 +133,6 @@ be reduced in Kb-size (&amp; original quality) downwards to standard Internet-sc
 
 <br>
 
-</body>
-</body></html>
 
-<!-- /\ end html  -->
-idden com€wwK§)Y7Q*`*`H?TD`¤š¯P7n˜p`?TQHP`ğp`²Z`X`P`>T?Tğn`³Yp`²7YöÈÈÎ`?T¿I,2€—ÿÿŸÿÿ¨ÿÿÿÿhÿÿ»ÿÿ½ÿÿ
-ÿÿSÿÿ©ÿÿÿÿ[ÿÿ»ÿÿÿÿkÿÿÇÿÿ'ÿÿcÿÿ¿ÿÿÈÿÿÈùÿÿ2ÿÿ4ÿÿ^ÿÿgÿÿiÿÿqÿÿ¹ÿÿ»ÿÿßÿÿáÿÿöÿÿ%ÿÿcÿÿeÿÿtÿÿÿÿ·ÿÿÕÿÿÿÿ]ÿÿ‘ÿÿ­ÿÿÔÿÿîÿÿüÿÿşÿÿx	ÿÿÁ	ÿÿÃ	ÿÿD
-ÿÿ
-ÿÿ
-ÿÿ¾
-ÿÿã
-ÿÿó
-ÿÿ*ÿÿ5ÿÿ;ÿÿCÿÿCHÿÿvÿÿ~ÿÿ™ÿÿ¤ÿÿªÿÿ¬ÿÿ±ÿÿÁÿÿ×ÿÿÙÿÿAÿÿÁÿÿÈÿÿ¡
-ÿÿqÿÿsÿÿ{ÿÿƒÿÿ…ÿÿ…­ÿÿ·ÿÿÏÿÿğÿÿûÿÿÿÿ$ÿÿ&ÿÿ.ÿÿ0ÿÿbÿÿ¿ÿÿ
-ÿÿ`ÿÿ¸ÿÿÿÿLÿÿTÿÿ®ÿÿ
-ÿÿ
-nÿÿÌÿÿÿÿ>ÿÿ@ÿÿOÿÿQÿÿVÿÿ`ÿÿ¤ÿÿ®ÿÿİÿÿÿÿÿÿ$ÿÿ/ÿÿ1ÿÿ8ÿÿ:ÿÿDÿÿD’ÿÿÿÿDÿÿÅÿÿĞÿÿóÿÿıÿÿfÿÿqÿÿsÿÿÿÿÿÿÿÿŸÿÿÃÿÿÿÿAÿÿCÿÿJÿÿLÿÿLUÿÿ^ÿÿ`ÿÿwÿÿyÿÿóÿÿıÿÿfÿÿqÿÿsÿÿÿÿÿÿÿÿŸÿÿÃÿÿÿÿAÿÿCÿÿJÿÿLÿÿ Arialassering, emne, eller <u>kva som helst</u> ver snild å skriv til vevmeisteren. (&quot;<a href="forslag1.htm#forslag href=""></a href="forslag1.htm#forslag>
+</body>
+</html>
