--- a/index-1.htm
+++ b/index-1.htm
@@ -7,7 +7,7 @@ data below. Meta tags help search engines identify the content of your page.  --
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta http-equiv="expires" content="5 December 2008 12:00:00 GMT">
 <meta name="revisit-after" content="10 days">
-   <meta name="keywords" content="trandal, trandal krins, trandal grendelag, trandal grange, trandal bygda, trandahl, tranndal, trandall, tranndall, trandale, trandohl, trandoll, trondal, Ðrandall, Þrandall, drandal, drandall, drandale, trandalhatten, trandalshatten, trandal's hat, trandaldalen, trandal setre, trandal sætra, trandal seter, trandalsangen, trandalsongen, trandals song, songen om trandal, song of trandal, ytre trandal, indre trandal, inngarden, rønning, ronning, roenning, r&ouml;nning, rønningen, ruðningr, rydning, rydningen, rynningen, rødning, rødingen, røenninge, rønningen, nes, naes, næs, næss, arnie norse, brekke, christian gaard, fylling, hauge, maaseidvaag, måseidvåg, mo, molaup, naustenget, skiffle joe, storeide, trandal fjordhytter, hjørundfjord, hjorundfjord, hjoerundfjord, jorringfjord, fjordenes perle, pearl of the fjords, fiords, fjord, noreg, norge, norway, norwegen, westnorwegen, Ålesund, aalesund, tandal, tanndall, tanndal, tanndale">
+   <meta name="keywords" content="trandal, trandal krins, trandal grendelag, trandal grange, trandal bygda, trandahl, tranndal, trandall, tranndall, trandale, trandohl, trandoll, trondal, ï¿½randall, ï¿½randall, drandal, drandall, drandale, trandalhatten, trandalshatten, trandal's hat, trandaldalen, trandal setre, trandal sï¿½tra, trandal seter, trandalsangen, trandalsongen, trandals song, songen om trandal, song of trandal, ytre trandal, indre trandal, inngarden, rï¿½nning, ronning, roenning, r&ouml;nning, rï¿½nningen, ruï¿½ningr, rydning, rydningen, rynningen, rï¿½dning, rï¿½dingen, rï¿½enninge, rï¿½nningen, nes, naes, nï¿½s, nï¿½ss, arnie norse, brekke, christian gaard, fylling, hauge, maaseidvaag, mï¿½seidvï¿½g, mo, molaup, naustenget, skiffle joe, storeide, trandal fjordhytter, hjï¿½rundfjord, hjorundfjord, hjoerundfjord, jorringfjord, fjordenes perle, pearl of the fjords, fiords, fjord, noreg, norge, norway, norwegen, westnorwegen, ï¿½lesund, aalesund, tandal, tanndall, tanndal, tanndale">
    <meta name="description" content="Trandal i Hj&oslash;rundfjord er bygda folk som heiter Trandal-Trandahl-Trandall kjem ifr&aring;... Trandal in Hj&oslash;rundfjord, Norway is where people named Trandal-Trandahl-Trandall come from.">
    <meta name="author" content="J.Q. Public_00">
    <meta name="distribution" content="Global">
@@ -67,7 +67,7 @@ today.</a></b> (Klikk her - <i>Click here</i>)</center>
 <!-- COMMENTS: This is the START of the INVISIBLE TEXT. -->
 <!-- COMMENTS: Note that the TEXT color is same as BACKGROUND here. -->
 <center><font size="-7"><font color="#ffffff">
-<br>Trandal i Hj&oslash;rundfjord p&aring; Vestlandet er staden dei som heiter Trandal - Trandahl - Trandall kjem ifr&aring;.. Trandal in Hj&oslash;rundfjord, West Norway is the place those who are named Trandal - Trandahl - Trandall come from.. Trandal in Westnorwegen, direkt am Hj&oslash;rundfjord Nähe Aalesund... Trandal - - Trandahl - - Trandall Nes - - N&aelig;ss - - R&oslash;nning - - R&oslash;nningen - - R&oslash;dning - - Rynningen<br>
+<br>Trandal i Hj&oslash;rundfjord p&aring; Vestlandet er staden dei som heiter Trandal - Trandahl - Trandall kjem ifr&aring;.. Trandal in Hj&oslash;rundfjord, West Norway is the place those who are named Trandal - Trandahl - Trandall come from.. Trandal in Westnorwegen, direkt am Hj&oslash;rundfjord Nï¿½he Aalesund... Trandal - - Trandahl - - Trandall Nes - - N&aelig;ss - - R&oslash;nning - - R&oslash;nningen - - R&oslash;dning - - Rynningen<br>
 
 </font color=""></font size=""></center>
 <!-- COMMENTS: This is the END of the INVISIBLE TEXT. -->
@@ -469,7 +469,7 @@ today.</a></b> (Klikk her - <i>Click here</i>)</center>
 <a name="englishstatistics"></a>
 
 <i><b>WEBSITE STATISTICS...</b></i><br>
-<br><font size="-1"><a href="#norskstatistikk">(Statistikk, på norsk)</a></font size=""><br>
+<br><font size="-1"><a href="#norskstatistikk">(Statistikk, pï¿½ norsk)</a></font size=""><br>
 
 <p>
 <table border="1" width="90% " bgcolor="#ffff9c">
@@ -789,7 +789,7 @@ END COMMENT -->
 <p><br></p>
 <p><br></p>
 
-<br>(Støtte - - - <i>Sponsoring</i>)<br>
+<br>(Stï¿½tte - - - <i>Sponsoring</i>)<br>
 <p><br></p>
 
 <!-- COMMENT: following is HIDCO info with logo  -->
@@ -810,4 +810,4 @@ END COMMENT -->
 <br>
 
 </body>
-</body></html>
+</html>
